--- a/offer/note/ch02.md
+++ b/offer/note/ch02.md
@@ -3,3 +3,11 @@
 1. 如果要求在二维数组(例如迷宫或者棋盘)上搜索路径，那么我们可以尝试 `回溯算法`
 2. 如果求某个问题的最优解，并且该问题可以划分为多个子问题，那么我们可以尝试 `动态规划`
 3. 如果说了动态规划的思路之后，还在提醒分解子问题的时候是不是存在某个特殊的选择，如果采用这个特殊的选择将一定能得到最优解，那么我们可以需要使用 `贪婪算法`
+
+### 2.4.3 回溯法
+
+回溯法非常适合由多个步骤组成的问题，并且每个步骤都有多个选项。 **当我们在某一步选择了其中一个选项时，就进入下一步，然后又面临新的选项。** 我们就这样重复选择，直到到达最终的状态。
+
+>回溯法：整个回溯的路径可以看成一颗树，树的根节点就是函数的执行入口。随后的每一个非叶子节点都是一个可能的选项，而每一个叶子节点都是函数执行的结果。
+>当我们到达一个叶子时，如果叶子满足条件，那么我们得到了结果。如果不满足条件，那么我们要去回溯到上一个节点并尝试其他选项，如果上一个节点中所有的可能选项都已经尝试过了，那么我们需要继续回溯上一个节点。
+>直到找到一个满足条件的节点，或者遍历完所有的节点仍然不能满足约束条件。则该道题无解。
