1. add offer: 2019-09-24 2. add leetcode

--- a/offer/note/ch02.md
+++ b/offer/note/ch02.md
@@ -11,3 +11,18 @@
 >回溯法：整个回溯的路径可以看成一颗树，树的根节点就是函数的执行入口。随后的每一个非叶子节点都是一个可能的选项，而每一个叶子节点都是函数执行的结果。
 >当我们到达一个叶子时，如果叶子满足条件，那么我们得到了结果。如果不满足条件，那么我们要去回溯到上一个节点并尝试其他选项，如果上一个节点中所有的可能选项都已经尝试过了，那么我们需要继续回溯上一个节点。
 >直到找到一个满足条件的节点，或者遍历完所有的节点仍然不能满足约束条件。则该道题无解。
+
+### 2.4.4 动态规划与贪婪算法
+
+如果一个问题能够分解为 `若干个子问题`， 并且子问题之间还有重叠的更小的子问题，就可以考虑用动态规划来解决这个问题。
+
+**如果能把大的问题分解成小问题，并且在每个小问题中寻找最优解。那么就能得到整体问题的最优解**
+
+1. 一个问题可以被分解为多个小问题
+2. 每个问题都在寻找问题的最优解
+3. 每个问题之间存在互相重叠的更小的问题
+4. 为了避免重复求解子问题，我们可以用从下往上的顺序先集散小问题的最优解并存储下来，再以此为基础求最大问题的最优解
+
+#### 贪婪算法
+
+贪婪算法和动态规划不一样，**当我们应用贪婪算法解决问题的时候，每一步都可以做出一个贪婪的选择，基于这个选择，我们确定能够得到最优解**
