--- a/offer/note/ch02.md
+++ b/offer/note/ch02.md
@@ -26,3 +26,7 @@
 #### 贪婪算法
 
 贪婪算法和动态规划不一样，**当我们应用贪婪算法解决问题的时候，每一步都可以做出一个贪婪的选择，基于这个选择，我们确定能够得到最优解**
+
+### 位运算
+
+小技巧：**n & (n - 1) 相当于把二进制表示中最右边的 1 变成 0**
