--- a/offer/note/ch02.md
+++ b/offer/note/ch02.md
@@ -30,3 +30,47 @@
 ### 位运算
 
 小技巧：**n & (n - 1) 相当于把二进制表示中最右边的 1 变成 0**
+
+### exec22 和 exec23 总结
+
+1. exec22 删除链表中的倒数第 k 个节点；
+2. exec22_1 输出链表中的中间的节点；
+3. exec23 查找循环链表中的循环入口。
+
+三道题都可以通过两个指针的移动来实现。
+
+1. 两个指针分别为 n 和 n + k，当我们 n + k 指向 nullptr 时，第一个节点就是倒数第 k 个节点
+2. 两个指针分别为 n 和 2*n，当后面的节点指向 nullptr 时，第一个节点就是中间节点
+3. 两个指针分别为 n 和 n + k，其中 k 为循环的长度，那么由于 k 为循环的长度，n 为到达循环入口之前的长度。所以我们只需要找出 k 即可。
+
+
+以上三题都利用了：
+
+1. 使用两个指针间距为 k 并同时向链表尾部移动，当较快的指针移动到 nullptr 时，较慢的指针就处于 n - k 这个位置
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
