--- a/挑战程序设计竞赛/note/02.md
+++ b/挑战程序设计竞赛/note/02.md
@@ -391,3 +391,461 @@ int main(int argc, char **argv)
 }
 
 ```
+
+## 2.3 记录结果再利用的 “动态规划”
+
+### 2.3.1 记忆化搜索与动态规划
+
+```c
+// 01 背包问题
+
+#include "iostream"
+
+int n, W;
+int items[100][2];
+
+void init()
+{
+	std::cin >> n;
+	int w0, v0, tmp = 0;
+	while (tmp++ < n)
+	{
+		std::cin >> w0 >> v0;
+		items[tmp][0] = w0;
+		items[tmp][1] = v0;
+	}
+	std::cin >> W;
+}
+
+int exhaustion(int i, int weight)
+{
+	if (i == n)
+	{
+		return 0;
+	}
+	else if (weight < items[i][0])
+	{
+		return exhaustion(++i, weight);
+	}
+	else
+	{
+		// 选择和不选择物品都尝试，并取得最大值
+		return std::max(exhaustion(i + 1, weight),
+						exhaustion(i + 1, weight - items[i][0]) + items[i][1]);
+	}
+}
+
+int main(int argc, char **argv)
+{
+	init();
+	std::cout << exhaustion(0, W) << std::endl;
+}
+
+```
+
+![2.3.1.1](pic/2.3.1.1.png)
+
+1. 可以看到，这里我们使用了所谓的 `记忆化搜索`，使用一个额外的数组保存了计算的结果。并在已经计算之后直接查表
+
+```c
+int dp_res(int i, int weight)
+{
+	if (dp[i][weight] >= 0)
+		return dp[i][weight];
+
+	int res;
+	if (i == n)
+	{
+		res = 0;
+	}
+	else if (weight < items[i][0])
+	{
+		res = dp_res(i + 1, weight);
+	}
+	else
+	{
+		res = std::max(dp_res(i + 1, weight),
+					   dp_res(i + 1, weight - items[i][0]) + items[i][1]);
+	}
+
+	return res;
+}
+
+```
+
+![func](pic/2.2.4.2_func.png)
+
+>推出来表格
+
+![table](pic/2.2.4.2_table.png)
+
+```c
+/**
+ * 数组的元素 dp[x][y] 表示：
+ *
+ * 从第 x 个元素开始选择，当前负重为 y 的最大价值
+ */
+int dp_func(int index, int weight)
+{
+	for (int i = 0; i <= 10001; ++i)
+	{
+		dp[100][i] = 0;
+	}
+
+	for (int i = n - 1; i >= 0; --i)
+	{
+		for (int j = 0; j <= W; j++)
+		{
+			// j 小于 items[i][0]，说明 dp[i][j] 无法选择 items[i] 元素
+			// 所以它可以简单的等于它的上面一层
+			if (j < items[i][0])
+			{
+				dp[i][j] = dp[i + 1][j];
+			}
+			else
+			{
+				// j 大于 items[i][0]，表示它可以选择 items[i] 元素，
+				// 所以它需要做一个比较，选择两个值中的较大值
+				// 1. 不选择 items[i]
+				// 2. 选择 items[i]，当选择 items[i] 时，它的最大值等于 dp[i+1][j-items[i][0]] + items[i][1]
+				dp[i][j] = std::max(dp[i + 1][j],
+									dp[i + 1][j - items[i][0]] + items[i][1]);
+			}
+		}
+	}
+
+	return dp[index][weight];
+}
+```
+
+#### 01背包问题的各种 DP
+
+![dp_func2](pic/2.2.4.2_func2.png)
+
+```c
+/**
+ * 表示从 [0, num] 的区间取，取出的最多不超过重量 weight 的物品
+ */
+int dp_func2(int num, int weight)
+{
+	for (size_t i = 0; i < W; ++i)
+	{
+		dp[0][i] = 0;
+	}
+
+	for (size_t i = 1; i <= n; ++i)
+	{
+		for (size_t j = 0; j <= W; ++j)
+		{
+			if (j < items[i - 1][0])
+			{
+				dp[i][j] = dp[i - 1][j];
+			}
+			else
+			{
+				dp[i][j] = std::max(dp[i - 1][j],
+									dp[i - 1][j - items[i - 1][0]] + items[i - 1][1]);
+			}
+		}
+	}
+
+	return dp[num][weight];
+}
+
+```
+
+#### 最长公共子序列
+
+1. 假设存在一个二维数 dp[i][j]， 表示的是 `[s1[0], s1[i]]` 和 `[s2[0], s2[j]]` 的最长公共子字符串。那么 dp[i+1][j+1] 的最长公共子字符串一定是以下三种情况之一
+	- 位于 `[s1[0], s1[i]]` 和 `[s2[0], s2[j+1]]` 之间
+	- 位于 `[s1[0], s1[i+1]]` 和 `[s2[0], s2[j]]` 之间
+	- 位于 `[s1[0], s1[i+1]]` 和 `[s2[0], s2[j+1]]` 之间
+		- 如果 `s1[i+1] == s2[j+1]`，那么在原来的最长公共子字符串上加上 `s1[i+1]` 和 `s2[j+1]`
+		- 如果 `s1[i+1] != s2[j+1]`，那么最长的公共子字符串肯定在前面的两种情况中
+2. **那么我们的最大值就可以转换为求以上三种情况的最大值了**
+
+---
+
+>那么我们可以推到出他们的转换公式
+
+- `s1[i+1] != s2[j+1]`: dp[i+1][j+1] = max(dp[i+1)[j], dp[i][j+1])
+- `s1[i+1] == s2[j+1]`: dp[i+1][j+1] = max(dp[i+1)[j], dp[i][j+1], dp[i][j] + 1)
+
+**可以看到，我们两个公式中都有可能会将 `i+1`, `j+1` 减少**
+
+```c
+void solve()
+{
+	int dp[len1 + 1][len2 + 1];
+	for (size_t i = 0; i <= len2; ++i)
+	{
+		dp[0][i] = 0;
+	}
+
+	for (size_t j = 0; j <= len1; ++j)
+	{
+		dp[j][0] = 0;
+	}
+
+	for (size_t i = 1; i <= len1; ++i)
+	{
+		for (size_t j = 1; j <= len2; ++j)
+		{
+			if (word1[i] == word2[j])
+			{
+				dp[i][j] = dp[i-1][j-1] + 1;
+			}
+			else
+			{
+				dp[i][j] = std::max(dp[i][j - 1], dp[i - 1][j]);
+			}
+		}
+	}
+
+	std::cout << dp[len1][len2] << std::endl;
+}
+
+```
+
+### 2.3.2 进一步探讨递归问题
+
+#### 完全背包问题
+
+>和完全背包问题不一样的是，我们的每个物品可以选择 `多次`。还是和前面一样，我们假设 dp[i][j] 表示从前面 i 件物品里选择重量不超过 j 的最大价值
+
+1. 想要达到 `dp[i+1][j]` 的状态可能由以下几种状态转换而来：
+	- 不选择物品 `i+1`，那么这个时候的最大值显然是 `dp[i][j]`（在重量都等于 `j` 的情况下，必然是可以选择的物品 `i` 越多，我们所得到的值越大）
+	- 选择物品 `i+1`，这个时候它和之前的01背包问题的区别来了，选择物品 `i+1` 可能是多次，所以它应该等于
+		- dp[i][j - w[i]] + v[i]
+		- dp[i][j - 2 * w[i]] + 2 * v[i]
+		- ...
+
+```c
+/**
+ * 从 [0, x - 1] 项元素里面，选择重量不超过 y 的物品。价值越高越好
+ */
+int solve(int x, int y)
+{
+	// 初始化 dp 数组
+	int dp[x + 1][y + 1];
+	for (size_t i = 0; i != x + 1; ++i)
+		dp[i][0] = 0;
+	for (size_t j = 0; j != y + 1; ++j)
+		dp[0][j] = 0;
+
+	for (size_t i = 1; i <= x; ++i)
+	{
+		for (size_t j = 1; j <= y; ++j)
+		{
+			int max = 0;
+			for (size_t k = 0; k * w[i-1] <= j; ++k)
+			{
+				int tmp = dp[i - 1][j - k * w[i-1]] + static_cast<int>(k) * v[i-1];
+				if (max < tmp)
+				{
+					max = tmp;
+				}
+			}
+			dp[i][j] = max;
+		}
+	}
+	
+	return dp[x][y];
+}
+
+```
+
+>对于输入 `[{3, 4}, {4, 5}, {2, 3}]`, `n == 3`, `w == 7`
+><br/>
+>int tmp = dp[i - 1][j - k * w[i-1]] + static_cast<int>(k) * v[i-1];
+
+
+- f(3, 7)
+	- ...
+	- f(3, 3)
+		- dp[2][3]
+		- dp[2][1] + 1 * v[2]
+	- f(3, 4)
+		- dp[2][4]
+		- dp[2][2] + 1 * v[2]
+		- dp[2][0] + 2 * v[2]
+	- f(3, 5)
+		- dp[2][5]
+		- dp[2][3] + 1 * v[2]
+		- dp[2][1] + 2 * v[2]
+	- f(3, 6)
+		- dp[2][6]
+		- dp[2][4] + 1 * v[2]
+		- dp[2][2] + 2 * v[2]
+		- dp[2][2] + 3 * v[2]
+	- f(3, 7)
+		- dp[2][7]
+		- dp[2][5] + 1 * v[2]
+		- dp[2][3] + 2 * v[2]
+		- dp[2][1] + 3 * v[2]
+	- ...
+
+>经过观察，我们发现（观察个x，书上说的，这谁他妈的观察得到啊？？？）
+><br/>
+>f(3, 7) 的三个可选项正好对应了 f(2, 5) 的几个可选项 + v[2]
+><br/>
+>`dp[2][5] + 1 * v[2]`, `dp[2][3] + 2 * v[2]`, `dp[2][1] + 3 * v[2]`
+><br/>
+>`dp[2][5]`, `dp[2][3] + 1 * v[2]`, `dp[2][1] + 2 * v[2]`
+><br/>
+>所以 max({dp[i][j-k\*w[i]]+k\*v[i] | 0 <= k})
+><br/>
+>所以 f(3, 7) == max(dp[2][7], dp[3][5])
+><br/>
+>**dp[i+1][j] == max(dp[i][j], dp[i + 1][j - w[i]] + w[i])**
+
+```c
+int solve2(int x, int y)
+{
+	// 初始化 dp 数组
+	int dp[x + 1][y + 1];
+	for (size_t i = 0; i != x + 1; ++i)
+		dp[i][0] = 0;
+	for (size_t j = 0; j != y + 1; ++j)
+		dp[0][j] = 0;
+
+	for (size_t i = 1; i <= x; ++i)
+	{
+		for (size_t j = 1; j <= y; ++j)
+		{
+			// 这里我犯了两个错误
+			// 1. 第一次我没有判断 j >= w[j - 1] 就开始计算实际的值，导致数据会访问到 0 以后的索引
+			// 2. 第二次判断了 j >= w[j - 1]，但是在不符合条件的时候没有赋值
+			// dp[i][j] = dp[i - 1][j];
+			// 这导致了部分数据未赋值
+			if (j >= w[i - 1])
+			{
+				dp[i][j] = std::max(dp[i - 1][j], dp[i][j - w[i - 1]] + v[i - 1]);
+			}
+			else
+			{
+				dp[i][j] = dp[i - 1][j];
+			}
+		}
+	}
+
+	return dp[x][y];
+}
+
+```
+
+#### 对完全/不完全背包问题的优化
+
+>对于输入 `[{3, 4}, {4, 5}, {2, 3}]`, `n == 3`, `w == 7`
+
+![2.2.4.2_profile](pic/2.2.4.2_prfile.png)
+
+>对比一下完全背包问题的状态转换
+
+![2.2.4.2_profile2](pic/2.2.4.2_profile2.png)
+
+针对不完全背包问题的优化：我们可以观察到一个结论，在二维数组中的 dp[i][j]， **在计算完 dp[i+1][j] 之后就不会再使用**，那么如果我们从右往左更新这个数组，那么就可以得到一个这样的一维数组：
+1. **对于 `index >= j` 的 dp[j], dp[j+1]...，它们等同于原来的二维数组的 dp[i][j], dp[i][j+1]**
+2. 对于 `index < j` 的 dp[j-1], dp[j-2]...，它们等同于原来的二维数组的 dp[i-1][j-1], dp[i-1][j-2]
+
+```c
+/*
+ * 对 dp 数组进行优化，只需要一维数组就可以。
+ * dp[i][j] 代表从前面 i 个元素开始，选择不大于重量 weight 的物品
+ */
+int dp_func3(int num, int weight)
+{
+	// 这里我出了一个 BUG，我没有初始化数组中所有的值。
+	int dp0[weight + 1];
+	memset(dp0, 0, sizeof(dp0));
+
+	for (size_t i = 1; i <= num; ++i)
+	{
+		for (size_t j = weight; j > 0; --j)
+		{
+			if (j >= items[i - 1][0])
+			{
+				dp0[j] = std::max(dp0[j],
+								  dp0[j - items[i - 1][0]] + items[i - 1][1]);
+			}
+			else
+			{
+				dp0[j] = dp0[j];
+			}
+		}
+	}
+
+	return dp0[weight];
+}
+```
+
+>对于完全背包问题的错误优化
+
+```c
+/*
+ * 注意，这个是完全背包问题的错误解法，我实现的时候包含了两个错误
+ */
+int solve3(int x, int y)
+{
+	// 初始化 dp 数组
+	int dp[y + 1];
+	for (size_t j = 0; j != y + 1; ++j)
+		dp[j] = 0;
+
+	for (size_t i = 1; i <= x; ++i)
+	{
+		// 错误1：这里我最开始使用的是 ++j
+		for (size_t j = y; j != 0; --j)
+		{
+			if (j >= w[i - 1])
+			{
+				/*
+				 * 错误2：
+				 * 注意到完全背包问题和不完全背包问题的状态变换公式是不一样的。
+				 * 完全背包问题的状态变换公式是：
+				 * dp[i+1][j] = std::max(dp[i][j],
+				 * 						 dp[i + 1][j - w[i]] + v[i])
+				 *
+				 * 注意，这里有个问题是：std::max() 的第二个参数是 dp[i+1] 而不是 dp[i]。
+				 * 按照我们之前的说法，这个以为数组小于 j 的部分，代表的其实是 dp[i] 的那一行。
+				 * 所以，我们这个解法退化成了不完全背包问题。
+				 */
+				dp[j] = std::max(dp[j],
+								 dp[j - w[i - 1]] + v[i - 1]);
+			}
+			else
+			{
+				dp[j] = dp[j];
+			}
+		}
+	}
+
+	return dp[y];
+}
+```
+
+>完全背包问题的正确解法
+
+![2.2.4.2_profile3](pic/2.2.4.2_profile3.png)
+
+1. 只需要将内层循环的代码修改为 `for (size_t j = w[i-1]; j <= weight; ++j)` 即可。
+2. 和前面的不完全背包问题一样， `dp[i+1][j]` 计算完之后就不会再继续使用，但是有一个新的问题， **在计算 `dp[i+1][j]` 的时候，需要使用到 dp[i+1][j-w[i]] 的数据**，所以我们刚才的从后往前的这种更新逻辑是不适用的。
+3. 我们根据新的公式，重新观察一下这个图，我们会发现一个重要的性质：dp[i+1][j] 在计算完之后 **得到的结果** 可能会被后续的计算使用
+4. 那么，根据 3 我们可以发现，如果我们从左到右去计算，那么就可以完成空间复杂度的优化。
+
+---
+
+#### 对比完全/不完全背包问题的优化
+
+1. 思考一下，我们将二维数组转换为一维数组，更新 dp[i] 代表了什么？
+	- **在我们的优化中， dp[j] 更新前表示 dp[i][j]，更新后表示 dp[i+1][j]**
+2. 完全背包问题的转换关系 dp[i+1][j] 依赖于两个位置：dp[i][j] 和 dp[i+1][j-w[i]] + v[i]
+3. 不完全背包问题的转换关系 dp[i+1][j] 依赖于两个位置：dp[i][j] 和 dp[i][j-w[i]] + v[i]
+4. 他们的共同点是：他们都依赖于 `dp[i][j]`，也就是更新前的数据。
+5. 他们的不同点是：一个依赖于 `dp[i+1][j-w[i]] + v[i]`， 一个依赖于 `dp[i][j-w[i]] + v[i]`。他们一个依赖于更新后的数据，一个依赖于更新前的数据。
+6. 所以，在我们循环更新数组的时候需要考虑如何才能保证那些满足各自对应的依赖：
+	- 对于完全/不完全背包，当我们更新 dp[j] 的时候，就已经可以当前的 dp[j] 是更新前的数据
+	- 对于完全背包，我们从数组 `0->W` 的方向更新，可以保证 dp[j] 更新时，它依赖的那个数据 **已经被更新**
+	- 对于不完全背包来说，我们从数组 `W->0` 的方向更新，可以保证 dp[j] 更新时，它依赖的那个数据 **尚未被更新**
+	
+>所以，针对任意的问题。我们都可以推断出一个结论：当我们更新数组时需要 **保证它依赖的数据的状态是它所需要的**
