--- a/挑战程序设计竞赛/note/02.md
+++ b/挑战程序设计竞赛/note/02.md
@@ -849,3 +849,219 @@ int solve3(int x, int y)
 	- 对于不完全背包来说，我们从数组 `W->0` 的方向更新，可以保证 dp[j] 更新时，它依赖的那个数据 **尚未被更新**
 	
 >所以，针对任意的问题。我们都可以推断出一个结论：当我们更新数组时需要 **保证它依赖的数据的状态是它所需要的**
+><br />
+>而当我们从数组的低位往高位更新，当我们更新到 dp[j] 的时候数组的形式如下：
+><br />
+>[ dp[`i+1`][0], dp[`i+1`][1], ..., dp[i][j], ..., dp[i][MAX_J] ]
+><br />
+>而当我们从数组的高位往地位更新，当我们更新到 dp[j] 的时候数组的形式如下：
+><br />
+>[ dp[i][0], dp[i][1], ..., dp[i][j], ..., dp[`i+1`][MAX_J-1], dp[`i+1`][MAX_J] ]
+
+#### 01背包问题[威力加强版]
+
+>相对于普通的01背包，唯一修改的是每个物品的重量修改到了 (0, 10<sup>7</sup>] 和总重量修改为了 10<sup>9</sup>
+
+1. 由于使用 `前面 i 个物品 - 当前重量 j` 表示当前状态的最大价值的空间复杂度太高，所以我们可以转变一下动态规划的思路：使用 `前面 i 个物品 - 当前的总价值 j` 表示达到这个状态所需的最少重量
+
+```c
+/*
+ * 定义 dp[i+1][j] 表示从前面 i 个物品中挑选出总价值为 j 的最小重量，不能满足则等于 INF，否则 >=0
+ */
+int solve(int max_num, int max_weight)
+{
+	// 100 表示每个物品的最大单价
+	int dp[max_num + 1][max_num * 5 + 1];
+	dp[0][0] = 0;
+	for (int i = 1; i < max_num + 1; ++i)
+		dp[i][0] = 0;
+	for (int j = 1; j < max_num * 5 + 1; ++j)
+		// 最早我的实现这里使用的是 -1 表示不可达到，但是在动态规划中我们需要选择 std::min
+		// 所以 -1 需要额外的步骤去判断是重量小于，还是不论怎么选，都达不到这个价值
+		dp[0][j] = 0xffff;
+
+	for (int i = 1; i < max_num + 1; i++)
+	{
+		for (int j = 1; j < max_num * 5 + 1; ++j)
+		{
+			// 同样的错误：没有判断 j >= v[i - 1] 又犯了一次
+			// 另外，没有对不满足条件时的 dp[i][j] 赋值又犯了一次
+			if (j >= v[i - 1])
+			{
+				// 最开始我还是在使用 std::max
+				dp[i][j] = std::min(dp[i - 1][j],
+									dp[i - 1][j - v[i - 1]] + w[i - 1]);
+			}
+			else
+			{
+				dp[i][j] = dp[i - 1][j];
+			}
+		}
+	}
+
+	// 最开始我返回了 dp[max_num][i] 而不是索引，这其实是错误的
+	for (int i = max_num * 5; i >= 0; --i)
+	{
+		if (dp[max_num][i] <= max_weight)
+		{
+			return i;
+		}
+	}
+
+	return 0;
+}
+```
+
+#### 多重部分和问题
+
+![多重部分和问题](pic/多重部分和问题.png)
+
+1. 假设 n 种不同的大小的数字最终达到了和为 K 的状态，那么我们可以肯定的是，他是从 `K - x` 的状态加上了一个数字 `x`。因为加法存在交换性，所以我们可以我们累加的这个数字 `x` 就是第 n 个数字。那么问题就被我们分解成了子问题： **前面 `n-1` 个数字是否可以得到累加和 {K, K - 1 * a[n], K - 2 * a[n] ...}**
+2. 那么我们可以定义： **dp[i+1][j] 表示用前面 i 种数字能否累加成 j**
+3. 那么得到了状态转换公式：
+	- dp[i+1][j] = dp[i][j] | dp[i][j - a[i]] | dp[i][j - 2 *a[i]]...
+
+```c
+/**
+ * 假设从前面 n 个元素中取元素累加，如果可以达到 k，那么就设置 dp[n][k] = true
+ */
+bool solve1()
+{
+	bool dp[n + 1][sum + 1];
+	for (int i = 0; i < n + 1; ++i)
+		dp[i][0] = true;
+	for (int j = 1; j < sum + 1; ++j)
+		dp[0][j] = false;
+
+	for (int i = 1; i < n + 1; ++i)
+	{
+		for (int j = 1; j < sum + 1; ++j)
+		{
+			dp[i][j] = false;
+			// BUG：没有比较 j >= k * a[i - 1] 导致访问越界
+			for (int k = 0; k <= m[i - 1] && j >= k * a[i - 1]; ++k)
+			{
+				dp[i][j] |= dp[i - 1][j - k * a[i - 1]];
+			}
+		}
+	}
+
+	return dp[n][sum];
+}
+```
+
+>可以看到，上面的空间复杂度是 O(n * sum)；而时间复杂度最差情况是 `O(n * sum * sum)`
+
+#### 多重部分和问题的优化
+
+观察前面的队列，我们可以看到在循环中，我们的 `for (int k = 0; k <= m[i - 1] && j >= k * a[i - 1]; ++k)` 循环中使用了很多次的 `m[i-1]`，如果我们可以将这个过程省略掉的话可以减少相当多的复杂度；
+
+那么，我们将 dp[i + 1][j] 定义为 **前面 i 个数字计算得到 j 时，还剩余 a[i] 的数量**，不能加到的时候为 -1
+
+那么可以得到状态转换方程：
+
+- dp[i + 1][j]
+	- m[i]						(dp[i][j] > 0)
+	- -1						(dp[i + 1][j - a[i]] <= 0 || a[i] > j)
+	- dp[i + 1][j - a[i]] - 1	(其他)
+
+
+```c
+/*
+ * dp[i][j] 表示从前面 i 个元素中累加得到 j 之后，剩余的 a[i-1] 数量，-1 表示不能累加得到 j
+ */
+bool solve2()
+{
+	int dp[n + 1][sum + 1];
+	for (int j = 0; j < sum + 1; ++j)
+		dp[0][j] = -1;
+	for (int i = 1; i < n + 1; ++i)
+		dp[i][0] = m[i - 1];
+
+	for (int i = 1; i < n + 1; ++i)
+	{
+		for (int j = 1; j < sum + 1; ++j)
+		{
+			// BUG：这里我开始只判断了 > 0 没有判断 == 0
+			if (dp[i - 1][j] >= 0)
+			{
+				// 前面 i - 1 个数字已经可以求和了，所以这里我们不用累加 a[i - 1]
+				dp[i][j] = m[i - 1];
+			}
+			else if (j < a[i - 1] || dp[i][j - a[i - 1]] <= 0)
+			{
+				// i 个数字没办法通过求和得到 K - a[i - 1]，自然也没办法通过求和得到 K
+				dp[i][j] = -1;
+			}
+			else
+			{
+				dp[i][j] = dp[i][j - a[i - 1]] - 1;
+			}
+		}
+	}
+
+	return dp[n][sum] > 0;
+}
+```
+
+>假设输入为 n = 3, sum = 7，数组为 [[4, 3], [2, 2], [2, 3]]
+
+![多重部分和问题_profileL](pic/多重部分和问题_profile.png)
+
+观察上面的图，我们会发现一个结论：
+
+1. dp[3][5] = dp[2][1] | dp[2][3] | dp[2][5]
+2. dp[3][3] = dp[1][1] | dp[2][3]
+
+那么，自然我们推断得出一个结论：
+
+- dp[i+1][j] = dp[i][j] | dp[i+1][j - a[i]]			(j >= a[i])
+- dp[i+1][j] = dp[i][j]
+
+于是我们做了如下优化：
+
+```c
+bool solve3()
+{
+	bool dp[n + 1][sum + 1];
+	for (int i = 0; i < n + 1; ++i)
+		dp[i][0] = true;
+	for (int j = 1; j < sum + 1; ++j)
+		dp[0][j] = false;
+
+	for (int i = 1; i < n + 1; ++i)
+	{
+		for (int j = 1; j < sum + 1; ++j)
+		{
+			if (j >= a[i - 1])
+			{
+				dp[i][j] = dp[i - 1][j] | dp[i][j - a[i - 1]];
+			}
+			else
+			{
+				dp[i][j] = dp[i - 1][j];
+			}
+		}
+	}
+
+	return dp[n][sum];
+}
+```
+
+然而，这个结论是错误的。当我们输入为：
+
+>3
+><br/>
+>7 3
+><br/>
+>5 2
+><br/>
+>2 3
+><br/>
+>10
+
+时，dp[3][9] 应该是不可达的，但是实际上我们算出来确实可达的。 **这是因为我们通过 dp[3][3], dp[3][5], dp[3][7] 分别可以得到和 2，4，6。然而，当我们尝试通过 `6+2` 得到 8 时却不行，因为 2 只有 3 个。所以我们修改了如上的解决方案，存储了所剩 a[i] 的数量**
+
+#### 最长上升子序列问题
+
+![最长上升子序列问题](pic/最长上升子序列问题.png)
