--- a/挑战程序设计竞赛/note/02.md
+++ b/挑战程序设计竞赛/note/02.md
@@ -77,6 +77,8 @@ int main(int argc, char **argv)
 
 ### 硬币找零
 
+![硬币问题](pic/硬币问题.png)
+
 1. 遵循某种规律，不断的选择 **最优选择**
 
 ```cpp
@@ -188,6 +190,8 @@ int main(int argc, char **argv)
 
 ### POJ 3617
 
+![Bect_Cow_Line](pic/Best_Cow_Line.png)
+
 1. 这个题的思路非常简单，找到首尾两个字符字典序中较小的那个字符，并输出
 2. 如果两个字符相同，那么随便输出一个即可：
 	- 之前考虑的是会出现 `X0X1[X2]x[X3]X1X0` 这种形式的，其实我们只需要随意输出任意一个 A1，随后在循环中进行下一轮比较即可。如果 `X3 < X2`，那么最后的形式一定是 X3 在 X2 的前面。所以我们优先减少右边去靠近 X3
@@ -268,6 +272,8 @@ int main(int argc, char **argv)
 
 ### POJ 3069
 
+![Saruman's Army](pic/SarumansArmy.png)
+
 ```C
 #include "iostream"
 #include "vector"
@@ -337,6 +343,8 @@ int main(int argc, char **argv)
 
 ### POJ 3253
 
+![Fence Repair](pic/FenceRepair.png)
+
 1. 每个节点的开销等于 `木板的最终长度 x 模板的深度`
 2. 最短的板应该是 **深度最大的子节点之一**。所以这个叶子节点的同一深度的兄弟节点一定存在，并且由于同样是最深的叶子节点，所以应该对应于次短的板
 3. 这种切法可以和我之前自己的切法（错误的）对比一下：我是每次切掉最大的那块，那么最终的结果是形成了一个队列（也可以说是左子节点为空的二叉树）。
@@ -395,6 +403,8 @@ int main(int argc, char **argv)
 ## 2.3 记录结果再利用的 “动态规划”
 
 ### 2.3.1 记忆化搜索与动态规划
+
+![01背包问题](pic/01背包问题.png)
 
 ```c
 // 01 背包问题
@@ -556,6 +566,8 @@ int dp_func2(int num, int weight)
 
 #### 最长公共子序列
 
+![最长公共子序列](pic/最长公共子序列.png)
+
 1. 假设存在一个二维数 dp[i][j]， 表示的是 `[s1[0], s1[i]]` 和 `[s2[0], s2[j]]` 的最长公共子字符串。那么 dp[i+1][j+1] 的最长公共子字符串一定是以下三种情况之一
 	- 位于 `[s1[0], s1[i]]` 和 `[s2[0], s2[j+1]]` 之间
 	- 位于 `[s1[0], s1[i+1]]` 和 `[s2[0], s2[j]]` 之间
@@ -610,6 +622,8 @@ void solve()
 ### 2.3.2 进一步探讨递归问题
 
 #### 完全背包问题
+
+![完全背包问题](pic/完全背包问题.png)
 
 >和完全背包问题不一样的是，我们的每个物品可以选择 `多次`。还是和前面一样，我们假设 dp[i][j] 表示从前面 i 件物品里选择重量不超过 j 的最大价值
 
@@ -860,6 +874,8 @@ int solve3(int x, int y)
 
 #### 01背包问题[威力加强版]
 
+![大容量01背包问题](pic/大容量01背包问题.png)
+
 >相对于普通的01背包，唯一修改的是每个物品的重量修改到了 (0, 10<sup>7</sup>] 和总重量修改为了 10<sup>9</sup>
 
 1. 由于使用 `前面 i 个物品 - 当前重量 j` 表示当前状态的最大价值的空间复杂度太高，所以我们可以转变一下动态规划的思路：使用 `前面 i 个物品 - 当前的总价值 j` 表示达到这个状态所需的最少重量
@@ -1065,3 +1081,145 @@ bool solve3()
 #### 最长上升子序列问题
 
 ![最长上升子序列问题](pic/最长上升子序列问题.png)
+
+1. 当新增一个数字 a[i] 的时候，现在的最长子序列可能是一下几种情况
+	- a[i] 大于当前最长子序列中的最大值，那么在当前最长上升子序列上加一
+	- a[i] 小于当前最长子序列中的最大值，但是大于当前的 **某一个上升子序列的最大值**，那么这个上升子序列的长度加一，并且最大值为 a[i]
+	- a[i] 不大于任何一个上升子序列的最大值，a[i] 成为一个新的长度为一的上升子序列的最大值
+2. 我们可以定义 `dp[i]` 表示以 a[i] 结尾的字符的最长上升子序列的个数，所以得到状态转换方程：
+	- dp[i] = 0						(i == 0)
+	- dp[i] = max{ 1, dp[j] + 1 | j < i && a[i] > a[j] }
+
+```c
+int solve()
+{
+	int dp[n];
+	dp[0] = 1;
+
+	for (int i = 1; i < n; ++i)
+	{
+		int max = 1;
+		// 4 2 3 1 5
+		for (int j = 0; j < i; ++j)
+		{
+			if (arr[i] > arr[j] && dp[j] >= max)
+			{
+				max = dp[j] + 1;
+			}
+		}
+		dp[i] = max;
+	}
+
+	// BUG：我之前直接返回了 dp[n - 1]
+	int max = 0;
+	for (int i = 0; i < n; ++i)
+	{
+		if (dp[i] > max)
+			max = dp[i];
+	}
+	return max;
+}
+
+```
+
+>上面的解法时间复杂度为 O(n<sup>2</sup>)；考虑到一个特点，对于长度为 n 的子上升序列，长度较小的那个数字更有优势 -- 对于 len(a[i]) == len(a[j]) && a[i] < a[j]，后续任意的数字只要满足 a[j] < a[q] 就一定满足 a[i] < a[j]
+
+1. 所以我们可以定义 dp[i] 代表的是序列长度为 i+1 的序列的最小数，如果不存在对应序列长度的话则定义为 INF
+2. 简单来讲，对于一个数字 a[i]，我们就用它去更新当前的 dp 序列中的某一个位置使得 **len(a[i]) == j && a[i] < dp[j]**，而这个位置就是 `j = lower_bound(a, a + n, a[i])`
+	- j == 0，则当前数组中最小的数字更新为 a[i]
+	- j > 0，则有 `dp[j] >= a[i]` && `dp[j-1] > a[i]`，也就是说
+		- a[i] 比长度为 `j-1` 的序列的最小值要大。那么 a[i] + 这个序列就构成了一个长度为 j 的新的序列，满足了条件 `len(a[i]) == j`
+		- a[i] `<` dp[j]，那么我们将 dp[j] = a[i] 即可
+3. **注意，我们在开始之前一定要将数组全部初始化为 INF，因为我们是从左到右更新 dp 数组，如果不将数组全部初始化为 INF 的话会导致二分查找错误**
+
+### 2.3.3 有关计数问题的 DP
+
+#### 划分数
+
+![划分数](pic/划分数.png)
+
+对应于牛客网的 [放苹果](https://www.nowcoder.com/questionTerminal/a2a1d0266629404fba582d416d84b6a0)
+
+>假设 dp[i][j] 是 j 的 i 划分
+
+1. 一种错误的思路是：我们首先从 j 中拿出 k 个，然后将剩下的 j-k 个分成 i-1 份，于是我们得到了 `dp[i][j] = sum(dp[i-1][j-1], ...)`。这是因为不同的划分中会有重复。
+2. 那么我们现在需要做的就是去想办法，避免计算这些重复的数据：我们使用新的划分方法：
+	- 在所有的盘子中都放上一个苹果，随后再将剩下的苹果放在盘子上，就是 dp[i][j - i]
+	- 空出第一个盘子，将苹果放在剩余的 i - 1 个盘子中，就是 dp[i - 1][j]
+	- 空出第二个盘子...
+3. 然而，`2` 仍然是错误的，因为 **空出第二个盘子，空出第三个盘子会在空出第一个盘子中的递归被计算，我们相当于重复计算了**
+
+>从我们下面的例子可以看到，`dp[2][4]` 表示空出一个盘子，然而在它的递归调用中可以看到 `dp[1][4]` 这个调用
+
+- dp[3][4]
+	- dp[2][4]
+		- dp[1][4] == 1 （对应于 4 的分法）
+		- dp[2][2]
+			- dp[1][2] == 1（对应于 1 3 的分法）
+			- dp[2][0] == 1（对应于 2 2 的分法）
+	- dp[3][1] == 1 （对应于 1 1 2 的分法）
+
+>递归的实现
+
+```c
+int solve0(int i, int j)
+{
+	if (i == 1 || j == 0)
+	{
+		// 只剩一个盘子了，或者没有苹果了
+		return 1;
+	}
+	else if (i > j)
+	{
+		// 盘子比苹果多
+		return solve0(j, j);
+	}
+	else
+	{
+		// 1. 在每个盘子中都放一个苹果，然后将剩下的苹果放到盘子中
+		// 2. 空出一个盘子不放苹果，将所有的苹果放到其他的盘子中
+		// 空出两个或两个以上的盘子会在 2 中被递归出来
+		return solve0(i, j - i) + solve0(i - 1, j);
+	}
+}
+
+```
+
+```c
+/*
+ * dp[n][m] 表示 m 的 n 划分
+ *
+ * m == 盘子数量
+ * n == 苹果数量
+ */
+int solve2()
+{
+	int dp[n + 1][m + 1];
+	// 苹果为0
+	for (int i = 0; i < n + 1; ++i)
+		dp[i][0] = 1;
+	// 盘子为1
+	for (int j = 0; j < m + 1; ++j)
+		dp[1][j] = 1;
+
+	for (int i = 2; i < n + 1; ++i)
+	{
+		for (int j = 1; j < m + 1; ++j)
+		{
+			if (j >= i)
+				dp[i][j] = dp[i][j - i] + dp[i - 1][j];
+			else
+				dp[i][j] = dp[j][j];
+		}
+	}
+
+	return dp[n][m];
+}
+
+```
+
+#### 多重集组合数
+
+![多重集组合数](pic/多重集组合数.png)
+
+
