--- a/挑战程序设计竞赛/note/2.5.md
+++ b/挑战程序设计竞赛/note/2.5.md
@@ -612,3 +612,91 @@ int main(int argc, char **argv)
 ```
 
 ### 任意两点之间的最短路径问题（Floyd-Warshall 算法）
+
+1. 只使用顶点 0 ~ k-1 和 i，j 的情况下，记 i 到 j 的最短长度为 `d[k+1][i][j]`， `k == -1` 时只使用 i，j，那么最短长度为 `d[0][i][j] = cost[i][j]`
+2. 在只使用 0~k 时，我们分路径正好经过顶点 k 一次和不经过 k 两种不同的情况：
+	- 当不经过顶点 k，则 `d[k][i][j] = d[k-1][i][j]`
+	- 当经过顶点 k 一次，则 `d[k][i][j] = d[k-1][i][k] + d[k-1][k][j]`
+3. 那么我们推出了表达式 d[k][i][j] = std::min(d[k-1][i][j], d[k-1][i][k] + d[k-1][k][j])
+4. 由于我们实际要求的是 d[i][j] 而不是 d[k][i][j]
+	- d[i][j] = min(d[0][i][j], ..., d[V-1][i][j])
+	- 根据上面的公式我们可以想象一下 d[k][i][j]，它其实是一个类似于魔方的结构，而 d[k][i][j](k = [0, V))，则它就是魔方中的一条线横穿了魔方的三个面。压缩到一个平面就是
+	- 在 `for(int k = 0; k < V; ++k)` 中不断的更新 d[i][j] = std::min(d[i][j], d[i][k] + d[k][j]);
+	- 注意，对于 d[i][j] 我们应该按照一定的规则初始化，d[i][i] = 0, d[i][j] = cost[i][j](包含i到j的路径)，d[i][j] = INF(不包含 i 到 j 的路径)
+5. Floyd 算法可以处理负圈的情况，只需要判断是否存在 d[i][i] 小于 0 的顶点即可。
+
+```cpp
+#include "iostream"
+#include "vector"
+
+const int INF = 0xffff;
+
+int V, E;
+
+std::vector<std::vector<int> > d;
+
+void init()
+{
+	std::cin >> V >> E;
+
+	char from, to;
+	int cost;
+
+	for (int i = 0; i < E; ++i)
+	{
+		std::vector<int> v;
+		for (int j = 0; j < E; ++j)
+		{
+			if (j == i)
+				v.push_back(0);
+			else
+				v.push_back(INF);
+		}
+		d.push_back(v);
+	}
+
+
+	for (int i = 0; i < E; ++i)
+	{
+		std::cin >> from >> to >> cost;
+		int f = from - 'a';
+		int t = to - 'a';
+		d[f][t] = cost;
+		d[t][f] = cost;
+	}
+}
+
+void floyd_warshall()
+{
+	for (int k = 0; k < V; ++k)
+	{
+		for (int u = 0; u < V; ++u)
+		{
+			for (int v = 0; v < V; ++v)
+			{
+				d[u][v] = std::min(d[u][v], d[u][k] + d[k][v]);
+			}
+		}
+	}
+
+	for (int i = 0; i < V; ++i)
+	{
+		for (int j = 0; j < V; ++j)
+		{
+			if (j != 0)
+				std::cout << ",";
+
+			std::cout << d[i][j];
+		}
+		std::cout << std::endl;
+	}
+}
+
+int main(int argc, char **argv)
+{
+	init();
+	floyd_warshall();
+}
+```
+
+#### 路径还原
