挑战程序设计竞赛：Prim and kruskal

--- a/挑战程序设计竞赛/note/2.5.md
+++ b/挑战程序设计竞赛/note/2.5.md
@@ -699,4 +699,355 @@ int main(int argc, char **argv)
 }
 ```
 
-#### 路径还原
+### 路径还原
+
+1. 以 Dijkstra 算法为例，对于节点 k 的前驱节点一定满足 d[k] = d[prev] + cost[prev][k]，通过不断的搜索前驱节点我们可以还原路径。 **还原每个路径的时间复杂度是 O(E)**
+2. 也可以使用 `prev[j]` 来记录 j 的前驱节点，只需要在更新 `d[j]` 的时候同时去更新 `prev[j]` 即可
+
+## 2.5.5 最小生成树(Spanning Tree)
+
+![生成树](pic/生成树.png)
+
+1. 给定一个无向图，如果它的某个 **子图** 中的任意两个顶点都连通，那么我们这棵树就被称之为生成树(Spanning Tree)
+2. 如果边上有权值，那么生成的树使得边权和最小的生成树叫做最小生成树(MST, Minimum Spanning Tree)
+
+### 1. 最小生成树问题（Prim 算法）
+
+![T和T以外的边的最小权值](pic/T和T以外的边的最小权值.png)
+
+我们假设有一颗只包含了一个顶点 v 的树 T， **然后贪心的找到 T 和其它顶点连接的最小的那条边**，并把这条边到达的顶点加入到 T 中，最后生成的树就是 MST 了。
+
+#### 证明 Prim 算法
+
+我们假设存在集合 V 和 X，V 是整个图的所有顶点，而 X 是已经被筛选出的最小生成树中的那些顶点。那么我们需要证明的是，对于连接 X 和 `V \ X` 的权值的最小的边 e，一定属于属于最小生成树。
+
+我们可以假设 e 不属于最小生成树，那么必然存在一条边 f 连接了 X 和 `V \ X`，而边 e 和 边 f 连接了 V 和 `V \ X` 并形成了一个圈。那么根据 e 的定义，f 的权值一定是大于 e 的。那么总权值 `cost(X) + cost(V\X) + cost(f) > cost(X) + cost(V\X) + cost(e)`
+
+#### 查找最小权值的边
+
+>错误的解法
+
+```cpp
+#include "iostream"
+#include "queue"
+
+const size_t MAX_V = 1024;
+
+class edge
+{
+public:
+	int from, to, cost;
+
+	edge(int from, int to, int cost) : from(from), to(to), cost(cost)
+	{}
+};
+
+struct EdgeCompare
+{
+	bool operator()(const edge &lhs, const edge &rhs)
+	{
+		return lhs.cost > rhs.cost;
+	}
+};
+
+int V, E;
+
+bool used[MAX_V];
+
+std::priority_queue<edge, std::vector<edge>, EdgeCompare> q;
+
+void init()
+{
+	std::cin >> V >> E;
+	char from, to;
+	int cost;
+	for (int i = 0; i < E; ++i)
+	{
+		std::cin >> from >> to >> cost;
+		int f = from - 'a';
+		int t = to - 'a';
+		q.push(edge(f, t, cost));
+		q.push(edge(t, f, cost));
+	}
+
+	memset(used, 0, sizeof(used));
+}
+
+/*
+ * 这是一个错误的解法，因为我没有每次去从已经构建的最小生成树子树的集 X 中去选取
+ * 下一个元素。
+ * 这可能导致部分节点没有被连通
+ */
+void prim()
+{
+	int mst = 0;
+	while (!q.empty())
+	{
+		/*
+		 * BUG：这里有个比较蛋疼的 BUG，最早我是使用的是 const edge &e0
+		 * 一般而言，许多编译器的引用都是通过指针实现的，所以 g++ 这里实际上使用了一个指针
+		 * 指向了 q.top() 的位置。
+		 * 而一般优先队列都是基于二叉堆实现的，在我们 pop() 一个元素的时候，会把老的元素删除，
+		 * 同时把新的元素放到堆的顶部，所以会出现一个情况， e0 实际上指向的是 pop() 执行之后
+		 * 的堆顶元素。
+		 *
+		 * 所以我们观察到的是，第一个元素出现了一次，而最后一个元素出现了三次；
+		 *
+		 * 正常应该是：
+		 *
+		 * 0,2,1
+		 * 2,0,1
+		 * ...
+		 * 4,1,10
+		 * 1,4,10
+		 *
+		 * 实际看到的却是
+		 * 0,2,1
+		 * ...
+		 * 4,1,10
+		 * 1,4,10
+		 * 1,4,10
+		 *
+		 * 而最后一次我们输出时的其实是未定义行为
+		 */
+		const edge e0 = q.top();
+		q.pop();
+		if (!used[e0.from] || !used[e0.to])
+		{
+			used[e0.from] = true;
+			used[e0.to] = true;
+			mst += e0.cost;
+
+			std::cout << e0.from << " " << e0.to << " " << e0.cost << std::endl;
+		}
+	}
+	std::cout << mst << std::endl;
+}
+
+int main(int argc, char **argv)
+{
+	init();
+	prim();
+}
+```
+
+>正确的解法
+><br/>
+>我们使用一个邻接表存储图的所有数据，一个 used 数组来区分 X 和 V，一个优先队列 X 的所有顶点对应的边
+><br/>
+>从 X 中取出一个边，如果这个边是连接 X 和 `V \ X` 的，那么新的顶点加入到 X 中并更新 X 中所有顶点的边。
+><br/>
+
+```cpp
+#include "iostream"
+#include "queue"
+
+const size_t MAX_V = 1024;
+
+class edge
+{
+public:
+	int from, to, cost;
+
+	edge(int from, int to, int cost) : from(from), to(to), cost(cost)
+	{}
+};
+
+struct EdgeCompare
+{
+	bool operator()(const edge &lhs, const edge &rhs)
+	{
+		return lhs.cost > rhs.cost;
+	}
+};
+
+int V, E;
+
+bool used[MAX_V];
+std::vector<std::vector<edge> > G;
+std::priority_queue<edge, std::vector<edge>, EdgeCompare> q;
+
+void init()
+{
+	std::cin >> V >> E;
+	char from, to;
+	int cost;
+	G.resize(V);
+	for (int i = 0; i < E; ++i)
+	{
+		std::cin >> from >> to >> cost;
+		int f = from - 'a';
+		int t = to - 'a';
+		G[f].push_back(edge(f, t, cost));
+		G[t].push_back(edge(t, f, cost));
+	}
+	memset(used, 0, sizeof(used));
+
+	for (int i = 0; i < G[0].size(); ++i)
+	{
+		q.push(G[0][i]);
+	}
+
+	used[0] = true;
+}
+
+void prim()
+{
+	int mst = 0;
+	while (!q.empty())
+	{
+		const edge e0 = q.top();
+		q.pop();
+		if (used[e0.from] && !used[e0.to])
+		{
+			used[e0.to] = true;
+			mst += e0.cost;
+			for (int i = 0; i < G[e0.to].size(); ++i)
+			{
+				q.push(G[e0.to][i]);
+			}
+			std::cout << e0.from << " " << e0.to << " " << e0.cost << std::endl;
+		}
+	}
+	std::cout << mst << std::endl;
+}
+
+int main(int argc, char **argv)
+{
+	init();
+	prim();
+}
+```
+
+### 2. 最小生成树问题2（Kruskal 算法）
+
+Kruskal 算法按照边的权值从小到大查看一遍， **如果不产生圈（或者重边），**就将这条边加入到生成树中。
+
+把n个顶点看成看成n棵分离的树（每棵树只有一个顶点），每次选取可连接两个分离树中权值最小的边把两个分离的树合成一个新的树取代原来的两个分离树，如果重复n-1步后便得到最小生成树。
+
+1. 选择边e1，使得权值w(e1)尽可能小；
+2. 若已选定边e1,e2,...,ei，则从E\{e1,e2,...,ei}选取e(i+1),使得
+	- G[{e1,e2,...,e(i+1)}]为无圈图
+	- 权值w(e(i+1))是满足（1）的尽可能小的权；
+3. 当步骤2不能继续执行时停止。
+
+>连通分量：无向图G的一个极大连通子图称为G的一个连通分量（或连通分支）。连通图只有一个连通分量，即其自身；非连通的无向图有多个连通分量。
+
+假设现在要把顶点 u 和顶点 v 的边 e 加入到生成树中。如果加入之前，u 和 v 不在一个连通分量里，那么加入之后他们也不会在一个连通分量中。我们可以使用并查集快速的查询 u 和 v 是否在一个连通分量里。
+
+```cpp
+#include "iostream"
+#include "queue"
+
+const int MAX_V = 1024;
+
+class edge
+{
+public:
+	int from, to, cost;
+
+	edge(int from, int to, int cost) : from(from), to(to), cost(cost)
+	{}
+};
+
+struct EdgeCompare
+{
+	bool operator()(const edge &lhs, const edge &rhs)
+	{
+		return lhs.cost > rhs.cost;
+	}
+};
+
+int par[MAX_V];
+int rank[MAX_V];
+
+static int find(int x);
+
+void init()
+{
+	for (int i = 0; i < MAX_V; ++i)
+	{
+		par[i]  = i;
+		rank[i] = 0;
+	}
+}
+
+bool same(int m, int n)
+{
+	return find(m) == find(n);
+}
+
+void unite(int m, int n)
+{
+	m = find(m);
+	n = find(n);
+	if (m == n)
+	{
+		return;
+	}
+	if (rank[m] > rank[n])
+	{
+		par[n] = par[m];
+	}
+	else
+	{
+		par[m] = par[n];
+		if (rank[m] == rank[n])
+		{
+			rank[m]++;
+		}
+	}
+}
+
+int V, E;
+std::priority_queue<edge, std::vector<edge>, EdgeCompare> q;
+
+void init2()
+{
+	init();
+	std::cin >> V >> E;
+	char from, to;
+	int cost;
+	for (int i = 0; i < E; ++i)
+	{
+		std::cin >> from >> to >> cost;
+		int f = from - 'a';
+		int t = to - 'a';
+		q.push(edge(f, t, cost));
+		q.push(edge(t, f, cost));
+	}
+}
+
+void kruskal()
+{
+	int mst = 0;
+	while (!q.empty())
+	{
+		edge e = q.top();
+		if (!same(e.from, e.to))
+		{
+			mst += e.cost;
+			unite(e.from, e.to);
+			std::cout << e.from << " " << e.to << " " << e.cost << std::endl;
+		}
+		q.pop();
+	}
+	std::cout << mst << std::endl;
+}
+
+static int find(int x)
+{
+	if (par[x] == x)
+	{
+		return x;
+	}
+	return find(par[x]);
+}
+
+int main(int argc, char **argv)
+{
+	init2();
+	kruskal();
+}
+
+```
