add maximum average

--- a/挑战程序设计竞赛/note/3.1.md
+++ b/挑战程序设计竞赛/note/3.1.md
@@ -200,3 +200,88 @@ int main(int argc, char **argv)
 	solve();
 }
 ```
+
+## 3.1.4 最大化平均值
+
+![最大化平均值](pic03/最大化平均值.png)
+
+>输出单位重量
+
+我最开始的思路是，将所有的值按照单位价值进行排序，从大到小贪心的进行选取。但是这样的输入对于样例输入的结果是 5/7 = 0.714。所以这个方法是不可取的。
+
+假设有三个物体分别是 item[0], item[1], item[2]，他们的单位价值分别是 v[0] > v[1] > v[2]。
+
+那么选择 item[0] 和 item[1] 的最后单位价值区间应该是 (v[0], v[1]), 而选择 item[0] 和 item[2] 的单位价值区间应该是 (v[0], v[2])。
+
+item[1] 的重量越大，那么选择 item[0] 和 item[1] 的单位价值就会越趋近于 v[1]。这个是不满足贪心算法的。
+
+---
+
+那么我们可以修改一下思路，我们的单位价值应该是 (0, max_per_weight)，我们可以使用二分法在这个里面去查找，每次都去判断是否能找到 k 个物品满足条件，直到找到答案。
+
+假设我们需要判断的单位重量为 x，那么就要 `sum(v0, ..., vk) / sum(w0, ..., wk) > x`，变化一下得到 `sum(v0, ..., vk) - x * sum(w0, ..., wk) > 0`
+
+>这里有一个非常重要的点，我们在 `solve` 方法中循环 100 次，这个时候我们的 `lb` 和 `ub` 都是 `double`，也就是我们期望找到的那个最大单位价值。
+>我们这里每一次计算都会使得我们计算的精度更高。
+
+```cpp
+#include "iostream"
+
+int n, k;
+double w_v[100][2];
+double per_w[100];
+
+void init()
+{
+	std::cin >> n >> k;
+	for (int i = 0; i < n; ++i)
+	{
+		std::cin >> w_v[i][0] >> w_v[i][1];
+	}
+}
+
+bool judge(double x)
+{
+	for (int i = 0; i < n; ++i)
+	{
+		per_w[i] = w_v[i][1] - x * w_v[i][0];
+	}
+	std::sort(per_w, per_w + n);
+
+	double sum = 0;
+	for (int i = 0; i < k; ++i)
+	{
+		sum += per_w[n - i - 1];
+	}
+
+	return sum > 0;
+}
+
+void solve()
+{
+	// 计算100次
+	double lb = 0, ub = 10e6;
+	for (int i = 0; i < 100; ++i)
+	{
+		double mid = (lb + ub) / 2;
+		if (judge(mid))
+		{
+			lb = mid;
+		}
+		else
+		{
+			ub = mid;
+		}
+	}
+
+	printf("%.2f\n", lb);
+}
+
+int main(int argc, char **argv)
+{
+	init();
+	solve();
+
+	return 0;
+}
+```
