挑战程序设计竞赛： face the right way

--- a/挑战程序设计竞赛/note/3.2.md
+++ b/挑战程序设计竞赛/note/3.2.md
@@ -219,3 +219,84 @@ int main(int argc, char **argv)
 尺取法一般用于枚举区间，求符合限制的区间，“返回值”是区间，整个序列区间要有一定规律，一般也是单调。
 
 尺取法的核心是，保存区间 `[s, t]` 的计算结果，当这个区间是满足条件的 **最短子序列** 时，下一次我们就删除掉 `s` 的结果得到 `[s+1, t]` 这个区间的计算结果。这样可以避免 `[s+1, t]` 这个区间的数据的重复计算来缩小复杂度。
+
+## 3.2.2 反转（开关问题）
+
+![face the right way](pic03/face the right way.png)
+
+---
+
+![k=3时的解法](pic03/k=3时的解法.png)
+
+我们可以先考虑对于特定的 k 如果求出让所有的牛朝向正确方向的。
+
+观察可以得到两个结论：
+
+1. 交换区间的反转顺序对结果没有影响；
+2. 对同一个区间的反转是无效果的。
+
+所以问题就转换成了，求所有需要反转的区间。那么，我们可以从做到右遍历数组，找到第一头朝向错误的牛。这头牛是一定需要做反转的，那么如果我们对这头牛进行一次反转操作，并且之后就再也不需要考虑这个区间了。
+
+我们再来考虑一下时间复杂度，对于特定的 k，最差情况下需要反转 `n - k + 1` 次，每次需要反转 `k` 个元素，并且对于每个 k 我们都必须求解一次。于是总的复杂度是 `O(n3)`
+
+### 3.2.2.1 不考虑时间复杂度的伪代码
+
+```cpp
+// 对每个特定的 k 求值
+for (int k = 2; k < n; ++k)
+{
+	// 从左到右对所有的区间进行反转
+	for (int i = 0; i < n; ++i)
+	{
+		if (no_need)
+		{
+			continue;
+		}
+		for (int j = 0; j < k; ++k)
+		{
+			// 翻转 k 头牛
+			a[i + j] |= a[i + j];
+		}
+	}
+}
+```
+
+我们可以看到，在伪代码中，我们对某一个位置的牛 a[s] 的反转是执行了多次的。那么自然的我们就可以去优化它。
+
+我们使用数组 f[i] 来表示对 `[i, i + k - 1]` 的区域进行了翻转，那么对于 a[i]，如果它的翻转次数是奇数它的值就是翻转后的值，如果是偶数它的值就是当前值。
+
+
+count(i + 1)
+a[i + 1] 的翻转次数 = f[i] + f[i - 1] + ... + f[i - k + 2]
+
+count(i + 2)
+a[i + 2] 的翻转次数 = f[i + 1] + f[i] + f[i - 1] + ... + f[i - k + 3]
+
+那么，我们只需要每次都记录下这个值，在下次计算时就可以得到：
+
+`count(i) = count(i - 1) + f[i - 1] - f[i - k]`
+
+这个是常数时间，至此伪代码可以修改为
+
+```cpp
+// [i - k, i] 这个区间的翻转次数之和
+int count = 0;
+int res = 0;
+// 对每个特定的 k 求值
+for (int k = 2; k < n; ++k)
+	// 从左到右对所有的区间进行反转
+	for (int i = 0; i + k <= n; ++i)
+	{
+		if (need_revert(count, a[i]))
+		{
+			++res;
+			f[i] = 1;
+		}
+		sum += f[i];
+		if (i - k + 1 >= 0)
+		{
+			sum - f[i - k + 1];
+		}
+	}
+}
+```
