挑战程序设计竞赛： fliptile

--- a/挑战程序设计竞赛/note/3.2.md
+++ b/挑战程序设计竞赛/note/3.2.md
@@ -300,3 +300,270 @@ for (int k = 2; k < n; ++k)
 	}
 }
 ```
+
+### 3.2.2.2 Face The Right Way (优化)
+
+```cpp
+#include "iostream"
+
+const int max_len = 5000;
+
+int n;
+int dir[max_len];
+int f[max_len];
+
+void init()
+{
+	std::cin >> n;
+	char     tmp;
+	for (int i = 0; i < n; ++i)
+	{
+		std::cin >> tmp;
+		dir[i] = tmp == 'F' ? 0 : 1;
+		std::cout << dir[i] << " ";
+	}
+	std::cout << std::endl;
+}
+
+int cal(int k)
+{
+	std::fill(f, f + n, 0);
+
+	int res = 0;
+	// f 的和
+	int sum = 0;
+	// 这里必须是 <=
+	for (int i = 0; i + k <= n; ++i)
+	{
+		if (((sum + dir[i]) % 2) != 0)
+		{
+			res += 1;
+			f[i] = 1;
+		}
+		sum += f[i];
+		if (i - k + 1 >= 0)
+		{
+			sum += f[i - k + 1];
+		}
+	}
+
+	for (int i = n - k + 1; i < n; ++i)
+	{
+		if (((sum + dir[i]) % 2) != 0)
+		{
+			return -1;
+		}
+		if (i - k + 1 >= 0)
+		{
+			sum += f[i - k + 1];
+		}
+	}
+
+	return res;
+}
+
+void solve()
+{
+	int K = 1, M = n;
+	for (int k = 2; k <= n; ++k)
+	{
+		int m = cal(k);
+		if (m > 0 && m < M)
+		{
+			K = k;
+			M = m;
+			std::cout << K << " " << M << std::endl;
+		}
+	}
+
+	std::cout << "k = " << K << ", m = " << M << std::endl;
+}
+
+int main(int argc, char **argv)
+{
+	init();
+	solve();
+
+	return 0;
+}
+```
+
+### 3.2.2.3 Fliptile
+
+![Fliptile](pic03/Fliptile.png)
+
+![answer](pic03/fliptile_answer.png)
+
+和前面那道题不一样，这里翻转一个格子有多种方法。例如要翻转左上角的格子，翻转 `(1, 1)`, `(2, 1)`, `(1, 2)` 都可以。
+
+但是有两个关键点和之前是一样的：
+
+1. 对同一个格子的多次翻转是无效的；
+2. 翻转的前后顺序不会改变最终的结果。
+
+**所以，和前面一样我们可以想办法去枚举所有的符合条件的集合。**
+
+**我们可以观察到一个结论，当第一行的翻转方式确定的时候，那么第二行的翻转方式也是确定了的，以示例为例子**
+
+最开始是
+
+```
+1 0 0 1
+0 1 1 0
+0 1 1 0
+1 0 0 1
+```
+
+假设第一行全部都不翻转，那么我们就知道 `(2, 1)` 和 `(2, 4)` 是一定要翻转的！因为这个时候只有它能翻转到上面的格子。而 `(2, 2)` 和 `(2, 3)` 是一定不能翻转的。
+
+最后得到了新的图
+
+```
+0 0 0 0
+1 0 0 1
+1 1 1 1
+1 0 0 1
+```
+
+接着又可以开始用第三行的翻转方式也确定了。
+
+那么以此类推我们可以慢慢的找到最后一行，如果最后一行不是全白，则说明我们确定的这第一行的翻转方式无解。
+
+>第一行的翻转有 2<sup>n</sup> 种选择，所以时间复杂度是 O(m * n * 2<sup>n</sup>)
+
+### 3.2.2.2 fliptile 代码实现
+
+1. vector的 `[]` 重载不会修改 vector 的容量，所以在访问 `[]` 的时候一定要手动的去 `resize()`，或者调用 `insert` 之类的方法
+2. 对于第一行参数的赋值，我们可以将第一行的 bool 数组看做一个二进制数组，这样我们就可以使用 `1 << n` 这个条件来循环得到 `2<sup>n</sup>` 的循环，循环得到的数字的每一位就对应于 bool 数组的值。
+
+```cpp
+#include "iostream"
+#include "vector"
+
+const int max_len = 15;
+
+const int WHITE = 0;
+const int BLACK = 1;
+
+const int IS_FLIP = 1;
+
+unsigned m, n;
+
+std::vector<std::vector<int>> ret;
+std::vector<std::vector<int>> BOARD;
+
+void init()
+{
+	std::cin >> m >> n;
+	// vector 的初始容量为空，必须通过 resize 或者 reserve 调整容量
+	BOARD.resize(m);
+	ret.resize(m);
+	for (int i = 0; i < m; ++i)
+	{
+		BOARD[i].resize(n);
+		ret[i].resize(n);
+		for (int j = 0; j < n; ++j)
+		{
+			std::cin >> BOARD[i][j];
+			std::cout << BOARD[i][j] << " ";
+		}
+		std::cout << std::endl;
+	}
+	std::cout << std::endl;
+}
+
+void flip_value(std::vector<std::vector<int>> &board, int i, int j)
+{
+	if (i >= 0 && i < m && j >= 0 && j < n)
+	{
+		board[i][j] = (board[i][j] == BLACK ? WHITE : BLACK);
+	}
+}
+
+void do_flip(std::vector<std::vector<int>> &board, int i, int j)
+{
+	flip_value(board, i, j);
+	flip_value(board, i - 1, j);
+	flip_value(board, i + 1, j);
+	flip_value(board, i, j - 1);
+	flip_value(board, i, j + 1);
+}
+
+void judge(std::vector<std::vector<int> > board)
+{
+	for (int i = 0; i < n; ++i)
+	{
+		if (ret[0][i])
+		{
+			do_flip(board, 0, i);
+		}
+	}
+
+	// 当到这一行时，第一行的翻转情况已经确定了
+	for (int i = 1; i < m - 1; ++i)
+	{
+		for (int j = 0; j < n; ++j)
+		{
+			int  color = board[i - 1][j];
+			if (color == BLACK)
+			{
+				do_flip(board, i, j);
+				ret[i][j] = true;
+			}
+			else
+			{
+				ret[i][j] = false;
+			}
+		}
+	}
+
+	// 检查最后一行是否为全白，不是的话说明对于固定的第一行，无解
+	for (int i = 0; i < n; ++i)
+	{
+		if (board[m - 1][i] == BLACK)
+		{
+			return;
+		}
+	}
+
+	std::cout << "========================" << std::endl;
+	for (int i = 0; i < m; ++i)
+	{
+		for (int j = 0; j < n; ++j)
+		{
+			std::cout << ret[i][j] << " ";
+		}
+
+		std::cout << std::endl;
+	}
+	std::cout << "========================" << std::endl;
+}
+
+void solve(std::vector<std::vector<int>> &board)
+{
+	// 注意这里的循环，我们可以把第一行当做是一个二进制的数字，每个数字表示当前这一位是0或者是1
+	for (unsigned i = 0; i < (1u << n); ++i)
+	{
+		for (unsigned j = 0; j < n; ++j)
+		{
+			ret[0][n - j - 1] = ((i >> j) & 1u);
+		}
+		judge(board);
+	}
+}
+
+int main(int argc, char **argv)
+{
+	init();
+
+	std::vector<std::vector<int>> board(BOARD);
+
+	solve(board);
+
+	return 0;
+}
+```
+
+### 专栏：集合的整数表示
+
+
