挑战程序设计竞赛： 3.2

--- a/挑战程序设计竞赛/note/3.2.md
+++ b/挑战程序设计竞赛/note/3.2.md
@@ -566,4 +566,304 @@ int main(int argc, char **argv)
 
 ### 专栏：集合的整数表示
 
+在程序中，当元素数比较少时，可以用 `二进制码` 来表示 `集合及其子集`，例如对于集合 `{0, 1, ..., n-1}` 这个总共为 n 个元素的集合。他的所有子集的数量是 2<sup>n</sup>
 
+于是我们可以这样表示这个集合的不同子集
+
+| 子集                            | code            |
+|---------------------------------|-----------------|
+| 空集                            | 0               |
+| 只有第 i 个元素的集合           | 1 << i          |
+| 含有全部 n 个元素的集合         | (1 << n) - 1    |
+| 判断第 i 个元素是否属于某个集合 | (S >> i) & 1    |
+| 向集合中加入第 i 个元素         | S 或 (1 << i)   |
+| 删除集合的第 i 个元素           | S & (~(1 << i)) |
+| 集合 S 和 T 的并集              | S 或 T          |
+| 集合 S 和 T 的交集              | S & T           |
+
+#### 枚举集合的全部子集
+
+```cpp
+for (int i = 0; i < (1 << n); ++i)
+{
+	// 子集处理
+}
+```
+
+这样，子集会按照 `0`, `1`, `10`, 这样的方式全部的枚举出来。
+
+#### 枚举某个集合的子集
+
+对于某个集合，它本身就是前面提到的集合 `S` 的子集。例如给定 `0110 1101` 这个集合，要枚举它的所有子集：
+
+`sub - 1` 可以消除数字中最低位的 1，并且将最低位 1 下的 0 都置位为 1。随后 `(sub - 1) & s` 可以直接跳过部分数字，这部分数字是我们的原始数字中的 0 被 `-1` 修改为 1 的数字。它们不是我们集合中的元素。
+
+```cpp
+#include "iostream"
+
+int main(int argc, char **argv)
+{
+	unsigned s = 109;
+	// 0110 1101
+	unsigned sub = s;
+	std::cout << s << std::endl;
+	do
+	{
+		sub = (sub - 1) & s;
+		std::cout << std::bitset<8>(sub) << " " << sub << std::endl;
+	} while (sub != s);
+}
+```
+
+## 3.2.3 弹性碰撞
+
+![Physics Experiment](pic03/Physics Experiment.png)
+
+## 3.2.4 折半枚举
+
+### 3.2.4.1 4 values whose sum is 0
+
+![4 values whose sum is 0](pic03/4 Values whose Sum is 0.png)
+
+从四个数列中取数字的时间复杂度是 O(n<sup>4</sup>)。我们可以将它们对半分成 A 和 B， C 和 D 两个组。
+
+当我们从 A 和 B 中取出两个数字得到 a + b 时，为了使得总和等于 0 则 C 和 D 就必须要满足 `c + d = -a - b`，如果我们先将 C 和 D 的和全部枚举出来并排序好，这样就可以运用二分搜索了。这个算法的复杂度是 `O(n<sup>2</sup>logn)`
+
+>有时候问题的规模比较大，无法枚举所有元素的组合，但能够枚举一半元素的组合。此时，将问题拆成两半之后分别枚举，再合并它们的结果非常有效。
+
+```cpp
+#include <vector>
+#include "iostream"
+
+int              n;
+std::vector<int> v1, v2, v3, v4;
+
+void insert_v(std::vector<int> &v)
+{
+	int      value;
+	for (int j = 0; j < n; ++j)
+	{
+		std::cin >> value;
+		v.push_back(value);
+	}
+}
+
+void init()
+{
+	std::cin >> n;
+	insert_v(v1);
+	insert_v(v2);
+	insert_v(v3);
+	insert_v(v4);
+}
+
+void solve()
+{
+	std::vector<int> cd;
+	std::for_each(std::begin(v3), std::end(v3), [&cd](const int c)
+	{
+		std::for_each(std::begin(v4), std::end(v4), [&cd, &c](const int d)
+		{
+			cd.push_back(c + d);
+		});
+	});
+	std::sort(std::begin(cd), std::end(cd));
+
+	int count = 0;
+	std::for_each(std::begin(v1), std::end(v1), [&cd, &count](const int a)
+	{
+		std::for_each(std::begin(v2), std::end(v2), [&cd, &a, &count](const int b)
+		{
+			count += std::upper_bound(std::begin(cd), std::end(cd), -(a + b))
+					 - std::lower_bound(std::begin(cd), std::end(cd), -(a + b));
+		});
+	});
+
+	std::cout << count << std::endl;
+}
+
+int main(int argc, char **argv)
+{
+	init();
+	solve();
+}
+```
+
+### 3.2.4.2 超大背包
+
+![超大背包](pic03/超大背包问题.png)
+
+回忆一下背包算法，背包算法是定义一个二维数组，二维数组的值是重量 `W`，`dp[i][j]` 表示的是在前面 `i` 个物品中挑选总价值不超过 `j` 的物品
+
+所以 `dp[i][j] = std::max(dp[i-1][j], dp[i][j-w[i]])`
+
+这样的时间复杂度和空间复杂度都为 `O(n * W)`
+
+**此时我们应该利用 n 比较小的特点来寻找其他方法**
+
+---
+
+考虑到枚举所有的选取方式有 2<sup>n</sup> 种，所以直接进行枚举是不行的，可以使用折半的方式来进行枚举。
+
+将整个数组对半切分得到两个数组，对于两个数组都有 2<sup>n/2</sup> 种挑选方式，我们将这些挑选方式分别记录为 `(w1, v1)` 和 `(w2, v2)`。
+
+那么现在我们要解决的问题就转变成了在这两个不同的记录中找到 `c1` 和 `c2` 在满足条件的情况下最大。
+
+在确定 c1 的情况下找到 c2 中满足 `w1 + w2 <= W` 并且 `v1 + v2` 最大的那个选项，这个就是当 c1 确定时的最优解。
+
+只要我们遍历 c1，并找到不同的 c1 对应的最优解就是全局最优解。
+
+那么问题就转换成了：**如何在 c1 确定的情况下，高效的搜索 c2 得到局部最优解；**
+
+首先，我们可以过滤同时满足如下两个条件的数据：`w[i] < w[j]` && `v[i] > v[j]` 的解 `j`，去除掉这些解之后剩下的数据都满足：对于任意的 `w[i] < w[j]` 一定有 `v[i] < v[j]`，那么我们直接可以使用二分查找法找到最大的满足条件的选择。
+
+时间复杂度是 ：枚举数组的复杂度为  O(2<sup>n/2</sup>)，在剩余的数组中进行二分查找的时间复杂度为 O(log2<sup>n/2</sup>) = O(n)，所以最终时间复杂度为 O(n2<sup>n/2</sup>)
+
+### 3.2.4.3 代码实现
+
+```cpp
+#include <vector>
+#include "iostream"
+
+int n, W;
+std::vector<int> w, v;
+
+void init()
+{
+	int tmp;
+	std::cin >> n;
+	std::cout << n << std::endl;
+	for (int i = 0; i < n; ++i)
+	{
+		std::cin >> tmp;
+		w.push_back(tmp);
+		std::cout << tmp << " ";
+	}
+	std::cout << std::endl;
+
+	for (int i = 0; i < n; ++i)
+	{
+		std::cin >> tmp;
+		v.push_back(tmp);
+		std::cout << tmp << " ";
+	}
+	std::cout << std::endl;
+
+	std::cin >> W;
+	std::cout << W << std::endl;
+}
+
+/**
+ * 枚举 lb 到 ub 区间所有可能的组合
+ * @param ret 结果
+ * @param lb  下界
+ * @param ub  上界
+ */
+void do_enum(std::vector<std::pair<int, int>> &ret, size_t lb, size_t ub)
+{
+	for (size_t i = 0; i < (1u << (ub - lb)); ++i)
+	{
+		int w0 = 0, v0 = 0;
+		size_t count = 0, e = i;
+		while (e != 0)
+		{
+			if ((e & 1u) != 0)
+			{
+				w0 += w[lb + count];
+				v0 += v[lb + count];
+			}
+			++count;
+			e >>= 1u;
+		}
+		ret.emplace_back(std::make_pair(w0, v0));
+	}
+}
+
+bool comp(const std::pair<int, int> l, const std::pair<int, int> r)
+{
+	return l.first < r.first;
+}
+
+std::vector<std::pair<int, int>> del_wrong(const std::vector<std::pair<int, int>> &pairs)
+{
+	std::vector<std::pair<int, int>> ret;
+	size_t i = 0;
+	// 注意，这里循环以直接到 pairs.size() - 1
+	// 因为最后一个元素是全选，也就是说除非有重量为 0 的 item，否则它的重量一定是唯一的。
+	for (; i < pairs.size() - 1; ++i)
+	{
+		int w0 = pairs[i].first, v0 = pairs[i].second;
+		while (w0 == pairs[i + 1].first)
+		{
+			if (pairs[i + 1].second > v0)
+			{
+				v0 = pairs[i + 1].second;
+			}
+			i++;
+		}
+		ret.emplace_back(w0, v0);
+	}
+
+	ret.push_back(pairs[i]);
+	return ret;
+}
+
+void solve()
+{
+	std::vector<std::pair<int, int>> left, right;
+	do_enum(left, 0, n / 2);
+	do_enum(right, n / 2, n);
+	std::sort(right.begin(), right.end(), comp);
+	std::vector<std::pair<int, int>> after_del = del_wrong(right);
+	int max_weight = 0;
+	std::for_each(std::begin(after_del), std::end(after_del), [](const std::pair<int, int> p){
+		std::cout << p.first << " " << p.second << std::endl;
+	});
+	std::cout << std::endl;
+	std::for_each(std::begin(left), std::end(left), [&](const std::pair<int, int> p){
+		if (p.first > W)
+		{
+			return;
+		}
+		else if (p.first == W)
+		{
+
+			max_weight = std::max(p.second, max_weight);
+		}
+		else
+		{
+			const std::pair<int, int> &t = std::make_pair(W - p.first, 0xffff);
+			const auto it = std::upper_bound(std::begin(after_del), std::end(after_del), t, comp) - 1;
+			max_weight = std::max(max_weight, (*it).second + p.second);
+		}
+	});
+	
+	std::cout << max_weight << std::endl;
+}
+
+int main(int argc, char **argv)
+{
+	init();
+	solve();
+}
+```
+
+## 3.2.5 坐标离散化
+
+![区域的个数](pic03/坐标离散化.png)
+
+### 3.2.5.1 样例输入
+
+![样例输入](pic03/坐标离散化-样例输入.png)
+
+x 表示列，y 表示行
+
+`x1` 和 `y1` 确认了直线的起点， `x2` 和 `y2` 确认了直线的终点。
+
+也就是说，对于直线 i，将 `(x1[i], y1[i])` 和 `(x2[i], y2[i])` 连起来就是我们的直线
+
+### 3.2.5.2 解题思路
+
+**将前后没有变化的 `行` 和 `列` 删除之后对我们的计算没有影响。**
+
+![坐标离散化-示例](pic03/坐标离散化-示例.png)
