挑战程序设计竞赛： Sparse Tree

--- a/挑战程序设计竞赛/note/3.3.md
+++ b/挑战程序设计竞赛/note/3.3.md
@@ -619,3 +619,33 @@ int main(int argc, char **argv)
 	2.5 将自身的 lazy_tag 置 0
 3. 在 search 的时候调用 `push_down` 不会增加复杂度，因为 `push_down` 的操作是常数，而需要执行 `push_down` 的次数最大也是线段树的高度，这个复杂度和普通的 search 是一样的，只不过增加一个常数 2。
 4. 为什么在 `search` 的时候需要 push_down，因为我们在求解最后结果的时候，如果不将前面的 `lazy_tag` 加上的话，下面的数据将少掉 `lazy_tag` 的那部分和。
+
+## 基于稀疏表（Sparse Table）的 RMQ
+
+对于数列 a[0],a[1],...,a[n] 构建的 ST 如下所示
+
+![Sparse Tree](pic03/SparseTree.png)
+
+**其中 t[i][j] 表示的是区间 [a[j, a[j+2<sup>i</sup>]]] 的最小值**
+
+>对于给定的区间 [x, y]，它一定可以划分为两个小的区间 [x, u] 和 [v, y]，其中 `v <= u`，那么 min([x, y]) == min(min([x, u]), min([v, y]))
+
+如果我们找到一个值 i，使得 `2<sup>i</sup> <= (y - x) < 2<sup>i+1</sup>`，我们就得到了两个值：
+
+1. u = `2<sup>i</sup> + x` ： 我们使用 ST 中的 `t[i][x]` 就得到了 `[a[x], a[u]]` 这个区间的最小值，并且 `u <= y`
+2. v = `y - 2<sup>i</sup>` ： 我们使用 ST 中的 `t[i][v]` 就得到了 `[a[v], a[y]]` 这个区间的最小值，并且 `v < u` && `v > x`
+
+### 证明
+
+u - y
+= pow(2, i) + x - y
+= pow(2, i) - (y - x)
+`<=` 0
+
+v - u
+= y - x - pow(2, i + 1)
+`<` 0
+
+v - x
+= y - x - pow(2, i)
+`>=` 0
