--- a/挑战程序设计竞赛/note/3.3.md
+++ b/挑战程序设计竞赛/note/3.3.md
@@ -649,3 +649,234 @@ v - u
 v - x
 = y - x - pow(2, i)
 `>=` 0
+
+## 3.3.2 树状数组（Binary Indexed Tree）
+
+树状数组可以完成下面的操作：
+
+给定一个初始值为 a[1], ..., a[n] 的数列
+
+- 给定 `i`，计算 a[1] + a[2] + ... + a[i]
+- 给定 i 和 x，执行 a[i] += x
+
+### 基于线段树的实现
+
+![线段树和建立与更新的例子](pic03/线段树和计算与更新的例子.png)
+
+- 给定 `i`，计算区间 `[a[1], a[i]]` 的和，这个很简单，直接使用线段树的区间查询即可
+- 给定 i 和 x，执行， a[i] += x，这个更简单，使用线段树的单点更新即可。
+
+求区间 `[a[s], a[t]]` 的和我们还有另外一种求法：计算区间 `[a[1], a[s - 1]]` 的和 u，区间 `[a[1], a[t]]` 的和 v，那么 `v - u` 就得到了区间的和。
+
+**在这种限制之下，线段树上的每个节点的右儿子都不需要了。因为如果区间 [a[1], a[s]] 需要用到右子节点，那么这个区间也一定包含了它的左子节点。那么我们直接使用它父亲的值即可**
+
+基于上面的想法实现的就是 BIT，它的实现更为简单
+
+![线段树上不需要用到的点](pic03/线段树不需要用到的店.png)
+
+### BIT 的结构
+
+BIT 使用数组维护下图所示的部分和
+
+![树状数组中每个元素对应的部分](pic03/树状数组中每个元素对应的部分.png)
+
+>**可以看到在上图中，我们就是把线段树中不需要的节点去掉之后，再把剩下的节点添加到数组中。**
+
+举个简单的例子，在线段树中，我们的 [1, 2] 这个区间分别是 a[1] 和 a[2] 的值。而在树状数组中，由于 a[2] 是右子节点，所以我们把它合并成了一个节点，并且这个节点是后续节点的左子节点。
+
+让我们对比一下每个节点对应的区间的长度和节点编号的二进制表示：
+
+- 1，3，5，7 这些末位为 1 的代表的是长度是 1；
+- 2，6 这些末位为 1 个 0 的代表的长度是 1；
+- 4 这些末位为 2 个 0 的代表的长度是 2；
+- 8 的末位为 3 个 0，代表的长度是 3.
+
+### BIT 数组每一个元素表示什么？
+
+>可以这么理解一下：我们的目的是要删除那些右子节点。记得我们之前提到的线段树中的右子节点的坐标是怎么计算的吗？节点 i 对应的右子节点应该是 `2 * i + 2`，这就代表着末位为0
+><br/>
+>如果一个位置的索引的末位为 0，代表它是一个右子节点。`i >> 1u` 之后如果末位仍然为 0，表示它的父节点仍然是一个右子节点。
+
+假设我们的原始数组是 `a`，树状数组是 `c`：
+
+那么对于树状数组中的每一个元素 `c[i]`
+
+1. 如果 `a[i]` 在线段树中是一个左子节点，那么 `c[i] = a[i]`
+2. 如果 `a[i]` 在线段树中是一个右子节点，那么 `c[i]` 等于 a[i] 加上它的左子节点，这得到了一个新的节点，如果这个节点在线段树中仍然为右子节点，那么我们要继续对它进行计算。
+
+以 c[8] 为例子：
+
+1. c[8] = a[8] + a[7]，计算完之后得到的节点对应线段树的 `[7, 8]` 区间，这仍然是一个右子节点
+2. c[8] = c[8] + c[6]，计算完之后得到的节点对应线段树的 `[5, 8]` 区间，这仍然是一个右子节点
+3. c[8] = c[8] + c[4]，计算完之后得到的节点对应线段树的 `[1, 8]` 区间，现在到了根节点。
+
+换句话说，对于 `C[i]`，假设它的低位有 n 个连续的 0，那么它包含的区间是 `[a[i - 2<sup>n</sup>+1], a[i]]`
+
+### 使用 BIT 求区间和 sum
+
+假设数组数组用数组 `C` 来表示，那么有：
+
+- C[1] = a[1]
+- C[2] = a[2] + a[1]
+- C[3] = a[3]
+- C[4] = a[4] + a[3] + a[2] + a[1]
+- C[5] = a[5]
+- C[6] = a[6] + a[5]
+- C[7] = a[7]
+- C[8] = a[8] + a[7] + a[6] + a[5] + a[4] + a[3] + a[2] + a[1]
+
+我们称C[i]的值为下标为i的数所管辖的数的和，C[8]存放的就是被编号8所管辖的那些数的和（有8个），而下标为i的数所管辖的元素的个数则为2^k个（k为i的二进制的末尾0的个数）举两个例子查询下标m8和m5所管辖的数的和
+
+- 8 = 1000，末尾3个0，故k == 3，所管辖的个数为2^3 == 8，C8是8个数的和
+- 5 = 0101，末尾没有0，故k == 0，所管辖的个数为2^0 == 1，C5是一个数的和（它本身A5）
+
+**假设我们的树状数组已经构造完毕，以 sum(7) 和  sum(6) 为例计算一下它的和**
+
+对于查询的m，将它转换成二进制后，不断对末尾的1的位置进行-1的操作，直到全部为0停止。
+
+7的二进制为0111（C7得到），那么先对0111的末尾1的位置-1，得到0110 == 6（C6得到），再对0110末尾1位置-1，得到0100 == 4（C4得到），最后对0100末尾1位置-1后得到0000（结束信号），计算停止，至此C7，C6，C4全部得到，求和后就是m == 7时它的前缀和
+
+m == 6时也是一样，先转成2进制等于0110，经过两次变换后为0100（C4）和0000（结束信号），那么求和后同样也得到了预计的结果
+
+>为什么我们可以这样求值呢？我们可以这么看，要求 sum(m)，则我们要求的是 a[1] + a[2] + ... a[m]
+><br />
+>根据我们前面的总结，sum(m) 等于它所有的左子树的和加上它的右子树（它的右子树可能有也可能没有，如果有的话就是 a[m]）
+><br />
+>而它的所有左子树就是它的二进制中所有为 1 的数字。
+
+那么现在我们要求它所有的为1的最低位，**i 的二进制的最后一个 1 可以通过 `i & -i` 得到**，我们可以这么记忆：i + (-i) == 0，那么 -i 就等于 i 的补码 + 1。那么就是说 i 和 -i 除了 i 的最低位的 1 相同之外，其他的都相反。
+
+```cpp
+#include "iostream"
+#include <bitset>
+
+int main()
+{
+	int num = 0xffff;
+	std::cout << std::bitset<32>(num) << std::endl;
+	std::cout << std::bitset<32>(-num) << std::endl;
+	// 00000000000000001111111111111111
+	// 11111111111111110000000000000001
+	return 0;
+}
+```
+
+### BIT 的更新
+
+![树状数组的示例](pic03/树状数组的示例.jpg)
+
+>对于输入编号为x的值，要求为它的值附加一个 v
+
+假设 `x == 2`, `v == 5`。很显然，当我们更新 a[2] 的时候，所有包含 a[2] 的区间都需要更新，这些节点分别是 c[2], c[4], c[8]
+
+**对于要更新 x 位置的值，我们把 x 转换成二进制，不断对二进制最后一个1的位置+1，直到达到数组下标的最大值n结束**
+
+>再回到我们之前的理解：a[i] 更新的时候，包含它的区间都需要更新。
+><br/>
+>假设它低位有 n 个连续的 0，那么包含它的区间有：
+><br/>
+>1. x >= i && x 的低位最少包含 n 个连续的 0。
+
+对于给出的例子x == 2，假设数组下标上限n == 8，x转换成二进制后等于0010（C2），对末尾1的位置进行+1，得到0100（C4），对末尾的1的位置进行+1，得到1000（C8），循环结束，对C2，C4，C8的前缀和都要加上value，当然不能忘记对A[2]的值+value，单点更新值过程结束
+
+```cpp
+void update(int x, int value){
+    A[x] += value;    //不能忘了对A数组进行维护，尽善尽美嘛
+    while(x <= n){
+        C[x] += value;
+        x += lowbit(x);
+    }
+}
+```
+
+### 构建 BIT
+
+事实上，对于一个输入的数组A，我们一次读取的过程，就可以想成是一个不断更新值的过程（把A1~An从0更新成我们输入的A[i]），所以一边读入A[i]，一边将C[i]涉及到的祖先节点值更新，完成输入后树状数组C也就建立成功了
+
+```cpp
+int main(){
+	while(scanf("%d", &n)!=EOF){	//用于测试n == 8 
+		memset(a, 0, sizeof(a));
+		memset(c, 0, sizeof(c));
+		for(int i = 1; i <= n; i++){
+			scanf("%d", &a[i]);		//a[i]的值根据具体题目自己安排测试可以1，2，3，4，5，6，7，8 
+			update(i, a[i]);		//输入的过程就是更新的过程 
+		}
+		int ans = getSum(n-1);		//用于测试输出n-1的前缀和 输出28 
+		printf("%d\n", ans);
+	}	
+	return 0;
+} 
+```
+
+### 完整代码
+
+```cpp
+// 树状数组
+
+#include <vector>
+#include "iostream"
+
+int n;
+std::vector<int> a, c;
+
+size_t low_bit(size_t x)
+{
+	return x & (-x);
+}
+
+int get_sum(size_t x)
+{
+	int s = 0;
+	while (x > 0)
+	{
+		s += c[x];
+		x -= low_bit(x);
+	}
+	return s;
+}
+
+void add(size_t x, int v)
+{
+	a[x] += v;
+	while (x <= n)
+	{
+		c[x] += v;
+		x += low_bit(x);
+	}
+}
+
+void init()
+{
+	std::cin >> n;
+	// 树状数组的下标是从 1 开始的
+	a.resize(n + 1);
+	c.resize(n + 1);
+	for (int i = 1; i <= n; ++i)
+	{
+		a[i] = 0;
+		c[i] = 0;
+	}
+
+	int num;
+	for (int i = 1; i <= n; ++i)
+	{
+		std::cin >> num;
+		add(i, num);
+	}
+}
+
+int main(int argc, char **argv)
+{
+	init();
+
+	assert(get_sum(1) == 1);
+	assert(get_sum(2) == 3);
+	assert(get_sum(3) == 6);
+	assert(get_sum(4) == 10);
+	assert(get_sum(5) == 15);
+	assert(get_sum(6) == 21);
+	assert(get_sum(7) == 28);
+	assert(get_sum(8) == 36);
+}
+```
