挑战程序设计竞赛： 求逆序对

--- a/挑战程序设计竞赛/note/3.3.md
+++ b/挑战程序设计竞赛/note/3.3.md
@@ -880,3 +880,93 @@ int main(int argc, char **argv)
 	assert(get_sum(8) == 36);
 }
 ```
+
+## 冒泡排序的交换次数
+
+![冒泡排序的交换次数](pic03/冒泡排序的交换次数.png)
+
+对于冒泡排序而言，交换的次数等同于所有逆序对的数量（满足 `i < j` && `a[i] > a[j]` 的对成为逆序对），对于每一个 j，如果能快速求出逆序对的个数问题就迎刃而解。
+
+我们构建一个值的范围是 1~n 的 BIT，按照 j = 0, 1, 2, ..., n-1 的顺序进行如下操作：
+
+我们的 BIT 的 C[i] 存放的是 `i = a[j]` 出现的次数。
+
+- 执行 `v = get_sum(a[j])`，由于我们是顺序执行的，所以得到的数字就是区间 `[a[1], a[j]]` 这个区间内小于 a[j] 的数字的个数，也就是说逆序对的个数等于 `j - get_sum(a[j])`
+- add(a[j], 1);
+
+```cpp
+/**
+ * 冒泡排序的交换次数
+ */
+#include <vector>
+#include "iostream"
+
+int n;
+std::vector<int> a, c;
+
+ssize_t low_bit(size_t x)
+{
+	return x & (-x);
+}
+
+void add(size_t x, int v)
+{
+	// 注意，这里和上面的不一样，不能修改原数组.
+	while (x <= n)
+	{
+		c[x] += v;
+		x += low_bit(x);
+	}
+}
+
+int get_sum(size_t x)
+{
+	int s = 0;
+	while (x != 0)
+	{
+		s += c[x];
+		x -= low_bit(x);
+	}
+	return s;
+}
+
+void init()
+{
+	std::cin >> n;
+	a.resize(n + 1);
+	c.resize(n + 1);
+	for (int i = 0; i <= n; ++i)
+	{
+		a[i] = 0;
+		c[i] = 0;
+	}
+
+	for (size_t i = 0; i <= n; ++i)
+	{
+		std::cin >> a[i];
+	}
+}
+
+void solve()
+{
+	int ret = 0;
+	for (int i = 0; i < n; ++i)
+	{
+		ret += i - get_sum(a[i]);
+		add(a[i], 1);
+	}
+	std::cout << ret << std::endl;
+}
+
+int main(int argc, char **argv)
+{
+	init();
+	solve();
+}
+```
+
+## A Simple Problem With Integers
+
+![A Simple Problem With Integers](pic03/A Simple Problem With Integers.png)
+
+>这个就是之前提到的包含 `push_down` 的线段树，区间更新和区间查询。
