挑战程序设计竞赛：求逆序对个数的离散化

--- a/挑战程序设计竞赛/note/3.3.md
+++ b/挑战程序设计竞赛/note/3.3.md
@@ -965,6 +965,162 @@ int main(int argc, char **argv)
 }
 ```
 
+### 冒泡排序交换次数离散化
+
+>假设我们修改一下原始条件，假设给定的一个长度为 n 的 long 数组，这个时候我们肯定是没办法声明一个那么大的树状数组的。
+><br/>
+>但是我们可以对数组进行离散化处理。因为只有 n 个数字，所以我们可以用从 [0, n-1] 的数字来表示数组里的 n 个数，从而达到压缩空间的效果。
+
+离散化的核心是： **为原数组中的每一个数字设置一个从属于 [0, n-1] 区间的编号，并且这个数字的编号也满足于他们大小比较关系。**
+
+所以我们将结构体 `node` 的 `v` 初始化为原数组的值， `order` 初始化为这个数字在原数组中的索引。
+
+我们对 `node` 进行排序之后得到了一个排序号的数组。那么这个时候的 a[i].order 对应的那个位置就应该是 i。
+
+```cpp
+// 离散化测试
+
+#include <vector>
+#include "iostream"
+
+struct node
+{
+	int v, order;
+};
+
+int               n;
+std::vector<node> a;
+std::vector<int> d;
+
+void init()
+{
+	std::cin >> n;
+	a.resize(n);
+	for (int i = 0; i < n; ++i)
+	{
+		std::cin >> a[i].v;
+		a[i].order = i;
+	}
+
+	std::sort(std::begin(a), std::end(a), [](const node &l, const node &r)
+	{
+		return l.v < r.v;
+	});
+
+	// 离散化映射
+	d.resize(n);
+	for (int i = 0; i < n; ++i)
+	{
+		d[a[i].order] = i;
+	}
+}
+
+int main(int argc, char **argv)
+{
+	init();
+}
+```
+
+### 离散化实现
+
+>这里要注意一个问题，我们在离散化数组的时候一定要从 1 开始初始化离散数组的映射。例如 {11,22,33,44} 这个四个数字一定要映射成为 {1,2,3,4} 而不能映射成为 {0,1,2,3}。
+><br/>
+>否则，从零开始的数组就会导致在 `+=`, `-=` low_bit 操作的时候导致死循环。
+
+```cpp
+// 求逆序对 + 离散化
+#include <vector>
+#include "iostream"
+
+struct node
+{
+	int v;
+	int order;
+};
+
+int               n;
+
+std::vector<int> a, c0;
+// 离散化之后的数组
+std::vector<int> d2;
+std::vector<node> d;
+
+ssize_t low_bit(size_t x)
+{
+	return x & (-x);
+}
+
+void add(size_t x, int v)
+{
+	while (x <= n)
+	{
+		c0[x] += v;
+		x += low_bit(x);
+	}
+}
+
+int get_sum(size_t x)
+{
+	int s = 0;
+	while (x != 0)
+	{
+		s += c0[x];
+		x -= low_bit(x);
+	}
+	return s;
+}
+
+void init()
+{
+	std::cin >> n;
+	a.resize(n);
+	d.resize(n);
+	d2.resize(n);
+	c0.resize(n + 1);
+	for (int i = 0; i < n; ++i)
+	{
+		a[i] = 0;
+		d[i] = {0, 0};
+	}
+
+	for (size_t i = 0; i < n; ++i)
+	{
+		std::cin >> a[i];
+		d[i].v = a[i];
+		d[i].order = i;
+	}
+
+	// 离散化数组
+	std::sort(std::begin(d), std::end(d), [](const node &l, const node &r)
+	{
+		return l.v < r.v;
+	});
+
+	for (int i = 0; i < n; ++i)
+	{
+		d2[d[i].order] = i + 1;
+	}
+}
+
+void solve()
+{
+	int      ret = 0;
+	for (int i   = 0; i < n; ++i)
+	{
+		ret += i - get_sum(d2[i]);
+		std::cout << i << std::endl;
+		add(d2[i], 1);
+	}
+	std::cout << ret << std::endl;
+}
+
+int main(int argc, char **argv)
+{
+	init();
+	solve();
+}
+```
+
 ## A Simple Problem With Integers
 
 ![A Simple Problem With Integers](pic03/A Simple Problem With Integers.png)
