--- a/挑战程序设计竞赛/note/3.3.md
+++ b/挑战程序设计竞赛/note/3.3.md
@@ -1126,3 +1126,207 @@ int main(int argc, char **argv)
 ![A Simple Problem With Integers](pic03/A Simple Problem With Integers.png)
 
 >这个就是之前提到的包含 `push_down` 的线段树，区间更新和区间查询。
+
+## 3.3.3 分桶法和平方分割
+
+分桶法是把一排物品或者平面分成桶，每个桶分别维护自己内部的信息，以达到高效计算的方法。
+
+![分桶法](pic03/分桶法.png)
+
+**和线段树一样，根据维护的数据的不同，平方分割可以支持很多不同的操作。**我们以 RMQ 为例子对平方分割法进行讲解
+
+### 基于平方分割法的 RMQ
+
+给定数组 `[a[1], a[n]]`，目标是在 `O(根号n)` 复杂度实现一下两个功能：
+
+1. 给定 s, t 求区间 `[a[s], a[t]]` 的最小值；
+2. 给定 i，x，令 a[i] = x
+
+### 基于平方分割的 RMQ 的预处理
+
+令 `b = floor(sqrt(n))`，把 a 中的元素每 b 个分成一个桶，并且计算出每个桶的最小值
+
+### 基于平方分割的 RMQ 查询
+
+- 如果桶完全包含在区间内，直接查询桶的最小值
+- 如果元素所在的桶不在区间包含，逐个检查最小值
+
+### 基于平方分割的 RMQ 的更新
+
+更新元素的最小值时，也需要更新每个桶的最小值。**注意，有可能需要遍历整个数组元素**
+
+### K-th number
+
+![K-th number](pic03/K-th Number.png)
+
+#### 基于分桶法实现
+
+1. 需要的桶的数量，等于 `n / BUCKET_SIZE` 向上取整，这里为了简单直接+1；
+2. 在搜索的时候，必须要 `tl <= tr` 这样闭区间搜索；
+3. 二分法在查询的时候，必须修改 `high = mid - 1` 或者 `low = mid + 1`
+
+```cpp
+#include <vector>
+#include "iostream"
+
+const int BUCKET_SIZE = 4;
+
+int                            n, m;
+std::vector<int>               a;
+std::vector<std::vector<int> > q;
+
+void init()
+{
+	std::cin >> n >> m;
+
+	int      tmp;
+	for (int i = 0; i < n; ++i)
+	{
+		std::cin >> tmp;
+		a.push_back(tmp);
+		std::cout << tmp << " ";
+	}
+
+	std::cout << std::endl;
+
+	for (int i = 0; i < m; ++i)
+	{
+		std::vector<int> v;
+		std::cin >> tmp;
+		v.push_back(tmp);
+
+		std::cin >> tmp;
+		v.push_back(tmp);
+
+		std::cin >> tmp;
+		v.push_back(tmp);
+
+		q.push_back(v);
+
+		std::cout << v[0] << " " << v[1] << " " << v[2] << std::endl;
+	}
+}
+
+/**
+ * 基于分桶法实现
+ */
+void solve1()
+{
+	// 我们使用 numbs 来实现对 k-th number 的二分查找
+	std::vector<int> nums(a);
+	std::sort(std::begin(nums), std::end(nums));
+
+	// 分桶并对每个桶里的数据进行排序
+	std::vector<std::vector<int> > buckets;
+	buckets.resize(n / BUCKET_SIZE + 1);
+	for (int i = 0; i < n; ++i)
+	{
+		int bucket_index = i / BUCKET_SIZE;
+		buckets[bucket_index].push_back(a[i]);
+	}
+
+	for (int i = 0; i < (n + 1) / BUCKET_SIZE; ++i)
+	{
+		std::sort(buckets[i].begin(), buckets[i].end());
+	}
+
+	for (int i = 0; i < buckets.size(); ++i)
+	{
+		std::cout << "[";
+		for (int j = 0; j < buckets[i].size(); ++j)
+		{
+			std::cout << buckets[i][j] << ",";
+		}
+		std::cout << "],";
+	}
+	std::cout << std::endl;
+
+	// 对输入数组 m 里的每个三元数组求解
+	for (int i = 0; i < m; ++i)
+	{
+		const int l  = q[i][0], r = q[i][1], k = q[i][2];
+		// 开始对数组进行二分查找
+		int       lb = 0, ub = n - 1;
+		// 二分查找都必须使用 lb <= ub 这个条件，并且变化 mid 的时候必须根据
+		// 上界或者下界来分别 +1 和 -1
+		while (lb <= ub)
+		{
+
+			int mid = (lb + ub) / 2;
+			int x   = nums[mid];
+
+			int tl = l, tr = r, c = 0;
+			// 搜索左边不包含在桶内的所有区间
+			while (tl <= tr && tl % BUCKET_SIZE != 0)
+			{
+				if (a[tl++] <= x)
+				{
+					++c;
+				}
+			}
+			// 搜索右边不包含在桶内的所有区间
+			while (tl <= tr && tr % BUCKET_SIZE != (BUCKET_SIZE - 1))
+			{
+				if (a[tr--] <= x)
+				{
+					++c;
+				}
+			}
+			// 搜索每一个完全包含在桶内的自区间
+			while (tl < tr)
+			{
+				int bucket_index = tl / BUCKET_SIZE;
+				c += std::upper_bound(buckets[bucket_index].begin(), buckets[bucket_index].end(), x)
+					 - buckets[bucket_index].begin();
+
+				tl += BUCKET_SIZE;
+			}
+
+			if (c >= k)
+			{
+				ub = mid - 1;
+			}
+			else
+			{
+				lb = mid + 1;
+			}
+		}
+
+		std::cout << nums[lb] << std::endl;
+	}
+}
+
+int main(int argc, char **argv)
+{
+	init();
+	solve1();
+}
+```
+
+### K-th number ： 使用线段树解决
+
+>和以往不同，我们线段树上每个节点保存的都是一个数列。数列存储了对应区间排序好之后的结果。
+
+![在本题中线段树的例子](pic03/在本题中使用线段树的例子.png)
+
+建立线段树的过程和归并排序一致，如上图正好是归并排序的一次完整再现。建树的复杂度是 O(nlogn)
+
+和前面一样，我们需要使用二分法搜索整个数组，查询数组中的某一个数字 x。数组中不小于 x 的数字的数量是 k 个（**查询条件是不小于的原因是数组可能有重复的数字）**。
+
+但是不用担心，因为我们的二分查找法最终会逼近我们的结果。
+
+>1 2 3 3 3 4 5
+
+我们要求数组中的第 4 大的数字。那么查询应该为：
+
+1. 查询数字 3，不小于数字 3 的有 5 个， `l == 0, r == 6, mid == 3`
+2. 查询数字 3，不小于数字 3 的有 2 个， `l == 0, r == 2, mid == 1`
+3. 查询数字 2，不小于数字 3 的有 5 个， `l == 2, r == 2, mid == 2`
+
+此时由于 `l < r`，退出循环。为什么是 `nums[lb]` 而不是 `nums[ub]` 呢？因为在我们的循环条件中，`c >= k` 就一定会进入循环条件导致 ub 小于我们要找的值的索引。
+
+在线段树中，要查找数组中不小于 x 的数字的数量需要以下步骤：
+
+1. 如果需要查找的区间包含了当前线段的整个区间，那么直接在这个区间进行二分查找；
+2. 如果两个区间不相交，则直接返回 0
+3. 否则在左子区间和右子区间分别查找
