挑战程序设计竞赛：最大流

--- a/挑战程序设计竞赛/note/3.5.md
+++ b/挑战程序设计竞赛/note/3.5.md
@@ -344,3 +344,4 @@ int main(int argc, char **argv)
 ### 最大流实现总结
 
 1. 最大流的实现使用邻接表会比邻接矩阵更好，**因为最大流实现算法需要遍历一个节点的所有边，并且不需要随机查询某条边的状态。**
+2. 使用邻接表时，可以像例子中一样，定义一个数据结构把 `cap` 以及反向边的另外一个节点存起来。因为我们在修改一条边的值的时候，需要同步的去修改它的反向边的值
