挑战程序设计竞赛：最小割

--- a/挑战程序设计竞赛/note/3.5.md
+++ b/挑战程序设计竞赛/note/3.5.md
@@ -345,3 +345,17 @@ int main(int argc, char **argv)
 
 1. 最大流的实现使用邻接表会比邻接矩阵更好，**因为最大流实现算法需要遍历一个节点的所有边，并且不需要随机查询某条边的状态。**
 2. 使用邻接表时，可以像例子中一样，定义一个数据结构把 `cap` 以及反向边的另外一个节点存起来。因为我们在修改一条边的值的时候，需要同步的去修改它的反向边的值
+
+## 3.5.2 最小割
+
+所谓的割，指的是对于某个图中的所有顶点集合 V，假设可以分为 S 和 U 两个不相交的集合，那么从 S 到 U 的那些 **边的集合** 就称之为割。
+
+边的容量之和称之为割的容量。
+
+对于两个顶点 s 属于 S， t 属于 U，那么此时的割又叫 `s-t 割`。如果将网络中所有 s-t 割所包含的边都删去，那么就不存在 s 到 t 的路径了。
+
+>对于给定网络，为了保证没有从 s 到 t 的路径，需要删除的边的总容量的最小值为多少。
+
+![最小割](pic03/最小割.png)
+
+![最小割的证明](pic03/最小割的证明.png)
